Feat/csv support multiout (#710)
* Added icon buttons and dialog stub for batched recipients

* Implemented Recipient Amount CSV Parser

* fixed failing tests

* Refactored burst-recipient-input to to receive a recipient as value

* batch processing is working for same and multi out now

* refining usability of multi out

* fixing my own review issues

* fix: Recipient Input Resets now

* Fixed Resetting issue, added removal for recipient items, and changed add feature

* pico refactoring

* Updated Changelog

* New version bumped...when release @blankey1337? :)

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -19,6 +19,7 @@
   "add_message_q": "Добави съобщение?",
   "add_note_to_self_q": "Добави бележка към себе си?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Добавяне на множество получатели от CSV",
   "add_recipient_to_contacts_q": "Добави получателя към контактите?",
   "add_sender_as_contact": "Добави подателя към контактите",
   "add_to_group": "Добави към група",
@@ -140,6 +141,7 @@
   "change_quantity": "Промяна на количеството",
   "cheap_fee": "евтин",
   "checking_for_updates": "Проверка за актуализации...",
+  "choose_delimiter": "Изберете разделител",
   "choose_own_passphrase": "Искате ли да изберете своя собствена парола-фраза? Щракнете тук.",
   "clear_results": "Изчисти резултатите",
   "clear_search_results": "Изчисти резултата от търсенето",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Кликнете тук, за да копирате паролата в клипборда",
   "click_to_refresh": "Кликнете, за да обновите",
   "close": "Затвори",
+  "comma": "запетая",
   "comment": "коментар",
   "complete": "Завърши",
   "confirm_contact_delete": "Да, изтрий контакта",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Създай анкета",
   "create_your_account": "Създайте сметка",
+  "csv_add_recipients": "Добавете получател с помощта на CSV",
+  "csv_error_duplicated_recipient": "Дублиран получател",
+  "csv_error_invalid_amount": "Невалидна стойност на сумата",
+  "csv_error_max_limit_multiout": "Превишен е максималният лимит за Multiout. Ограничението е:",
+  "csv_error_max_limit_same_multiout": "Максималният лимит за една и съща сума е превишен. Ограничението е:",
+  "csv_error_unreadable_format": "Непрочитаем формат",
   "current_price": "Текуща цена",
   "current_quantity": "Текущо количество",
   "current_version": "Сегашна версия",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Ако загубите пропуск, няма да можете да извършвате никакви транзакции, т.е. монетите ви са изгубени. Кодовата фраза не може да бъде възстановена. Запазете тази секретна парола. Всеки, който знае паролата, е de facto собственикът на профила.",
   "message": "Съобщение",
   "message_empty": "Съобщението е празно.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Това съобщение е шифровано.",
   "message_is_not_encrypted": "Това съобщение не е шифровано.",
+  "message_is_text": "Message is Text?",
   "messages": "Съобщения",
   "min_nr_of_options": "Минимален брой опции",
   "minimum_fee": "минимум",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Attention: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_write_below": "Фразата на паролата е много важна! За да сте сигурни, че сте я запазили, моля напишете фразата по-долу: ",
   "password_required_for_decryption": "Необходима е вашата парола, за да дешифрирате тези съобщения.",
+  "paste_csv_content": "Поставете CSV съдържанието тук",
   "payload": "Съдържание",
   "payload_hash": "Съдържание хеш",
   "payload_length": "Съдържание дължина",
@@ -773,9 +783,10 @@
   "repeat": "Повтори",
   "request_burst": "Request BURST",
   "request_processing_time": "Заявете време за обработка",
+  "reset_recipients": "Нулиране на получателите",
   "returning_user_q": "Връщащ се потребител?",
   "reward_recipient": "Награда Получател",
-  "same_out": "Same Amount",
+  "same_out": "Същата сума",
   "scoop_num": "Номер на лъжичка",
   "search_aliases": "Търси псевдоними...",
   "search_assets": "Търси активи...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Изберете цветова схема",
   "select_contact_in_sidebar": "Моля изберете контакт в лявата лента.",
   "select_node": "Изберете Node",
+  "select_recipients": "Изберете Получатели",
   "sell": "Продай",
   "sell_alias": "Продай псевдоним",
   "sell_asset_for_burst": "Sell __assetName__ for BURST",
@@ -799,6 +811,7 @@
   "seller": "Продавач",
   "seller_account_id": "Продавач сметка iD",
   "seller_products": "Продукти на продавача",
+  "semicolon": "точка и запетая",
   "send": "Изпрати",
   "send_a_message": "Изпрати съобщение",
   "send_burst": "Send BURST",
@@ -901,6 +914,7 @@
   "success_valid_token": "Маркерът е валиден и принадлежи към сметка __account_link__. Бил е генериран на __timestamp__.",
   "suggested_fee": "Предложени такси",
   "suggested_fee_help": "Евтина такса: 50% шанс за транзакция ще го направи в един от следващите десет блока. в следващия блок и 99% в следващите два блока.",
+  "tabulator": "табулатор",
   "tags": "Етикети",
   "tags_categories": "Етикети (категории)",
   "tentative": "Ориентировъчен",
