--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -19,6 +19,7 @@
   "add_message_q": "Afegir un missatge?",
   "add_note_to_self_q": "Afegir una nota personal?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Addició de diversos destinataris per CSV",
   "add_recipient_to_contacts_q": "Afegir el destinatari a contactes?",
   "add_sender_as_contact": "Afegeix l'emissor com a Contacte",
   "add_to_group": "Afegir al grup",
@@ -140,6 +141,7 @@
   "change_quantity": "Canviar Quantitat",
   "cheap_fee": "Barat",
   "checking_for_updates": "Comprovant actualitzacions...",
+  "choose_delimiter": "Trieu un Delimitador",
   "choose_own_passphrase": "Voleu triar la vostra contrasenya? Feu clic aquí.",
   "clear_results": "Netejar Resultats",
   "clear_search_results": "Netejar Resultats de Cerca",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Feu clic aquí per copiar la contrasenya al porta-retalls",
   "click_to_refresh": "Feu clic per actualitzar",
   "close": "Tancar",
+  "comma": "Coma",
   "comment": "Comentari",
   "complete": "Complet",
   "confirm_contact_delete": "Sí, Suprimeix el Contacte",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Crear Enquesta",
   "create_your_account": "Crear el Teu Compte",
+  "csv_add_recipients": "Afegir destinatari mitjançant CSV",
+  "csv_error_duplicated_recipient": "Destinatari duplicat",
+  "csv_error_invalid_amount": "El valor de l'import no és vàlid",
+  "csv_error_max_limit_multiout": "S'ha excedit el límit màxim per a Multiout. El límit és:",
+  "csv_error_max_limit_same_multiout": "Superat el límit màxim per a la mateixa quantitat que es pot superar. El límit és:",
+  "csv_error_unreadable_format": "Format il·legible",
   "current_price": "Preu Actual",
   "current_quantity": "Quantitat Actual",
   "current_version": "Versió actual",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Si perdeu la contrasenya, no podreu fer cap transacció, és a dir, es perdran les vostres monedes. La contrasenya no es pot recuperar. Manteniu aquesta contrasenya secreta. Tothom que sàpiga la contrasenya és de facto el propietari del compte.",
   "message": "Missatge",
   "message_empty": "El Missatge és buit.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Aquest missatge és xifrat.",
   "message_is_not_encrypted": "Aquest Missatge no està Xifrat.",
+  "message_is_text": "Message is Text?",
   "messages": "Missatges",
   "min_nr_of_options": "Nr mínim d'opcions",
   "minimum_fee": "Mínim",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Attention: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_write_below": "La contrasenya és molt important! Per estar segurs de que la heu guardat, si us plau escrigui la contrasenya sota: ",
   "password_required_for_decryption": "Es necessita la vostre Contrasenya per desxifrar aquests missatges.",
+  "paste_csv_content": "Enganxeu el contingut CSV aquí",
   "payload": "Càrrega",
   "payload_hash": "Hash de la Càrrega",
   "payload_length": "Longitud de la Càrrega",
@@ -773,9 +783,10 @@
   "repeat": "Repetir",
   "request_burst": "Request BURST",
   "request_processing_time": "Temps de processament de sol·licituds",
+  "reset_recipients": "Restablir destinataris",
   "returning_user_q": "Usuari existent?",
   "reward_recipient": "Destinatari de recompensa",
-  "same_out": "Same Amount",
+  "same_out": "Mateixa quantitat",
   "scoop_num": "Número d’escola",
   "search_aliases": "Cercar Àlies...",
   "search_assets": "Cercar Actius...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Seleccioneu el Color del Disseny",
   "select_contact_in_sidebar": "Si us plau seleccioneu un contacte a la barra de l'esquerra.",
   "select_node": "Trieu el node",
+  "select_recipients": "Seleccioneu Destinataris",
   "sell": "Vendre",
   "sell_alias": "Vender Àlies",
   "sell_asset_for_burst": "Vendre __assetName__ per burst",
@@ -799,6 +811,7 @@
   "seller": "Venedor",
   "seller_account_id": "ID del Compte del venedor",
   "seller_products": "Productes de Venedor",
+  "semicolon": "Punt i coma",
   "send": "Enviar",
   "send_a_message": "Enviar un missatge",
   "send_burst": "Enviar burst",
@@ -901,6 +914,7 @@
   "success_valid_token": "L'identificador és vàlida i pertany al compte __account_link__. S'ha generat a les __timestamp__.",
   "suggested_fee": "Tarifes suggerides",
   "suggested_fee_help": "Tarifa barata: la transacció del 50% serà possible en un dels propers deu blocs. <br /> Tarifa estàndard: la transacció del 50% de probabilitats la farà al següent bloc. <br /> Taxa de prioritat: es farà un 90% de transacció. el següent bloc i el 99% per als següents blocs.",
+  "tabulator": "Tabulador",
   "tags": "Etiquetes",
   "tags_categories": "Etiquetes (categories)",
   "tentative": "Provisional",
