--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -19,6 +19,7 @@
   "add_message_q": "Nachricht hinzufügen?",
   "add_note_to_self_q": "Erinnerung hinzufügen?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Hinzufügen mehrerer Empfänger per CSV",
   "add_recipient_to_contacts_q": "Empfänger zu Kontakten hinzufügen?",
   "add_sender_as_contact": "Absender als Kontakt hinzufügen",
   "add_to_group": "Zur Gruppe hinzufügen",
@@ -140,6 +141,7 @@
   "change_quantity": "Menge ändern",
   "cheap_fee": "Billig",
   "checking_for_updates": "Suche nach Updates...",
+  "choose_delimiter": "Wählen Sie ein Trennzeichen",
   "choose_own_passphrase": "Möchten Sie Ihre eigene Passphrase wählen? Klicken Sie hier.",
   "clear_results": "Ergebnisse löschen",
   "clear_search_results": "Suchergebnisse löschen",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Klicken Sie hier, um die Passphrase in die Zwischenablage zu kopieren",
   "click_to_refresh": "Klicken Sie, um zu aktualisieren",
   "close": "Schließen",
+  "comma": "Komma",
   "comment": "Kommentar",
   "complete": "Abgeschlossen",
   "confirm_contact_delete": "Ja, Kontakt löschen",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Abstimmung erstellen",
   "create_your_account": "Erstellen Sie Ihr Konto",
+  "csv_add_recipients": "Empfänger mit CSV hinzufügen",
+  "csv_error_duplicated_recipient": "Duplizierter Empfänger",
+  "csv_error_invalid_amount": "Ungültiger Betragswert",
+  "csv_error_max_limit_multiout": "Höchstgrenze für Multiout überschritten. Grenze ist:",
+  "csv_error_max_limit_same_multiout": "Maximales Limit für Multiout bei gleichem Betrag überschritten. Grenze ist:",
+  "csv_error_unreadable_format": "Nicht lesbares Format",
   "current_price": "Aktueller Preis",
   "current_quantity": "Aktuelle Menge",
   "current_version": "Aktuelle Version",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Wenn Sie die Passphrase verlieren, können Sie keine Transaktionen durchführen, d. H. Ihre Münzen gehen verloren. Die Passphrase kann nicht wiederhergestellt werden. Bewahren Sie diese Passphrase geheim auf. Jeder, der die Passphrase kennt, ist de facto der Besitzer des Kontos.",
   "message": "Nachricht",
   "message_empty": "Die Nachricht ist leer.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Diese Nachricht ist verschlüsselt.",
   "message_is_not_encrypted": "Diese Nachricht ist nicht verschlüsselt.",
+  "message_is_text": "Message is Text?",
   "messages": "Nachrichten",
   "min_nr_of_options": "Mindestanzahl an Optionen",
   "minimum_fee": "Minimum",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Achtung: Die Passphrase verhindert unerlaubten Zugriff auf Ihr Konto. Verwenden Sie keine sinnvollen Sätze - vor allem keine, die in Musikstücken oder Literatur vorkommen.<br /><br />Verraten Sie niemals Ihre Passphrase. Wenn Sie sie verlieren, verlieren Sie den Zugriff auf Ihr Konto!",
   "passphrase_write_below": "Ihre Passphrase ist sehr wichtig! Um sicherzustellen, dass Sie sie gespeichert haben, geben Sie bitte Ihre Passphrase erneut ein:",
   "password_required_for_decryption": "Ihre Passphrase wird benötigt, um diese Nachrichten zu entschlüsseln.",
+  "paste_csv_content": "Fügen Sie hier den CSV-Inhalt ein",
   "payload": "Nutzdaten",
   "payload_hash": "Nutzdatenhash",
   "payload_length": "Nutzdatenlänge",
@@ -773,9 +783,10 @@
   "repeat": "Wiederholen",
   "request_burst": "Request BURST",
   "request_processing_time": "Bearbeitungszeit anfordern",
+  "reset_recipients": "Empfänger zurücksetzen",
   "returning_user_q": "Konto bereits vorhanden?",
   "reward_recipient": "Belohnungsempfänger",
-  "same_out": "Same Amount",
+  "same_out": "Gleicher Betrag",
   "scoop_num": "Scoop-Nummer",
   "search_aliases": "Suche Aliasse...",
   "search_assets": "Suche Assets...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Farbschema auswählen",
   "select_contact_in_sidebar": "Bitte wählen Sie einen Kontakt in der linken Seitenleiste.",
   "select_node": "Knoten auswählen",
+  "select_recipients": "Wählen Sie Empfänger",
   "sell": "Verkaufen",
   "sell_alias": "Alias verkaufen",
   "sell_asset_for_burst": "__assetName__ für BURST verkaufen",
@@ -799,6 +811,7 @@
   "seller": "Verkäufer",
   "seller_account_id": "Account ID des Verkäufers",
   "seller_products": "Artikel des Verkäufers",
+  "semicolon": "Semikolon",
   "send": "Senden",
   "send_a_message": "Senden Sie eine Nachricht.",
   "send_burst": "BURST überweisen",
@@ -901,6 +914,7 @@
   "success_valid_token": "Das Token ist gültig und gehört zum Konto __account_link__. Es wurde am __timestamp__ generiert.",
   "suggested_fee": "Vorgeschlagene Gebühren",
   "suggested_fee_help": "Günstige Gebühr: 50% Chance-Transaktion schafft es in einem der nächsten zehn Blöcke. <br /> Standardgebühr: 50% Chance-Transaktion schafft es im nächsten Block. <br /> Prioritätsgebühr: 90% Chance-Transaktion schafft es es im nächsten Block und 99% innerhalb der nächsten zwei Blöcke zu machen.",
+  "tabulator": "Tabulator",
   "tags": "Tags",
   "tags_categories": "Tags (Kategorien)",
   "tentative": "Vorläufig",
