--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -19,6 +19,7 @@
   "add_message_q": "Προσθήκη μηνύματος;",
   "add_note_to_self_q": "Να προσθέστε τη σημείωση για εσάς;",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Προσθήκη πολλών παραληπτών ανά CSV",
   "add_recipient_to_contacts_q": "Προσθήκη αποδέκτη στις επαφές;",
   "add_sender_as_contact": "Προσθήκη αποστολέα ως επαφή",
   "add_to_group": "Προσθήκη στην ομάδα",
@@ -140,6 +141,7 @@
   "change_quantity": "Αλλαγή ποσότητας",
   "cheap_fee": "Φτηνός",
   "checking_for_updates": "Έλεγχος για ενημερώσεις...",
+  "choose_delimiter": "Επιλέξτε ένα διαχωριστικό",
   "choose_own_passphrase": "Θέλετε να επιλέξετε τη δική σας φράση πρόσβασης; Κάντε κλικ εδώ.",
   "clear_results": "Διαγραφή αποτελέσματων",
   "clear_search_results": "διαγραφή αποτελεσμάτων αναζήτησης",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Κάντε κλικ εδώ για να αντιγράψετε τη φράση πρόσβασης στο πρόχειρο",
   "click_to_refresh": "Κάντε κλικ για ανανέωση",
   "close": "Κλείσιμο",
+  "comma": "Κόμμα",
   "comment": "Σχόλιο",
   "complete": "Ολοκλήρωση",
   "confirm_contact_delete": "Ναι, διαγραφή επαφής",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Δημιουργία δημοσκόπησης",
   "create_your_account": "Δημιουργία του λογαριασμού σας",
+  "csv_add_recipients": "Προσθέστε τον παραλήπτη χρησιμοποιώντας το CSV",
+  "csv_error_duplicated_recipient": "Διπλότυπος παραλήπτης",
+  "csv_error_invalid_amount": "Μη έγκυρη τιμή ποσού",
+  "csv_error_max_limit_multiout": "Έγινε υπέρβαση του ανώτατου ορίου για το Multiout. Το όριο είναι:",
+  "csv_error_max_limit_same_multiout": "Μέγιστο όριο για το ίδιο ποσό Πολλαπλή υπέρβαση. Το όριο είναι:",
+  "csv_error_unreadable_format": "Μη αναγνώσιμη μορφή",
   "current_price": "Τρέχουσα τιμή",
   "current_quantity": "Τρέχουσα ποσότητα",
   "current_version": "Τρέχουσα έκδοση",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Εάν χάσετε τη φράση πρόσβασης, δεν θα μπορείτε να πραγματοποιήσετε συναλλαγές, δηλαδή τα νομίσματά σας χάνονται. Η φράση πρόσβασης δεν είναι ανακτήσιμη. Διατηρήστε αυτή τη φράση μυστικότητας. Όλοι όσοι γνωρίζουν τη φράση πρόσβασης είναι de facto ο κάτοχος του λογαριασμού.",
   "message": "Μήνυμα",
   "message_empty": "Το μήνυμα είναι κενό.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Αυτό το μήνυμα είναι κρυπτογραφημένο.",
   "message_is_not_encrypted": "Αυτό το μήνυμα δεν είναι κρυπτογραφημένα.",
+  "message_is_text": "Message is Text?",
   "messages": "Μηνύματα",
   "min_nr_of_options": "Minimum Nr of Options",
   "minimum_fee": "Ελάχιστο",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Attention: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_write_below": "Η Συνθηματική φράση σας είναι πολύ σημαντική! Για να είμαστε σίγουροι ότι την αποθηκεύσατε σωστά, παρακαλώ εισάγετε τη συνθηματική φράση σας παρακάτω: ",
   "password_required_for_decryption": "Your passphrase is required to decrypt these messages.",
+  "paste_csv_content": "Επικολλήστε το περιεχόμενο CSV εδώ",
   "payload": "Payload",
   "payload_hash": "Hash πληρωμής",
   "payload_length": "Payload Length",
@@ -773,9 +783,10 @@
   "repeat": "Επανάληψη",
   "request_burst": "Request BURST",
   "request_processing_time": "Ζήτηση χρόνου επεξεργασίας",
+  "reset_recipients": "Επαναφορά παραληπτών",
   "returning_user_q": "Επιστροφή χρήστη;",
   "reward_recipient": "Ανταμοιβή παραλήπτη",
-  "same_out": "Same Amount",
+  "same_out": "Ιδιο ποσό",
   "scoop_num": "Αριθμός Scoop",
   "search_aliases": "Search Aliases...",
   "search_assets": "Search Assets...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Επιλέξτε χρώμα σχεδίου",
   "select_contact_in_sidebar": "Please select a contact in the left sidebar.",
   "select_node": "Επιλέξτε Κόμβο",
+  "select_recipients": "Επιλέξτε Παραλήπτες",
   "sell": "Πωληση",
   "sell_alias": "Πώληση ψευδώνυμου",
   "sell_asset_for_burst": "Πώληση__assetName__ έναντι burst",
@@ -799,6 +811,7 @@
   "seller": "Πωλητή",
   "seller_account_id": "Seller's Account ID",
   "seller_products": "Προϊόντα του πωλητή",
+  "semicolon": "Ανω τελεία",
   "send": "Αποστολή",
   "send_a_message": "Στείλτε ένα μήνυμα",
   "send_burst": "Αποστολή burst",
@@ -901,6 +914,7 @@
   "success_valid_token": "The token is valid and belongs to account __account_link__. It was generated on __timestamp__.",
   "suggested_fee": "Προτεινόμενες αμοιβές",
   "suggested_fee_help": "Φτηνές χρεώσεις: 50% πιθανότητα συναλλαγής θα γίνει σε ένα από τα επόμενα δέκα τετράγωνα. <br /> Τυπική αμοιβή: 50% πιθανή συναλλαγή θα γίνει στο επόμενο τετράγωνο. <br /> Τέλος προτεραιότητας: 90% τυχαία συναλλαγή θα κάνει στο επόμενο μπλοκ και 99% στο επόμενο τετράγωνο.",
+  "tabulator": "Πινακοποιητής",
   "tags": "Ετικέτες",
   "tags_categories": "Tags (categories)",
   "tentative": "Αβέβαιο",
