--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -19,6 +19,7 @@
   "add_message_q": "¿Añadir un Mensaje?",
   "add_note_to_self_q": "¿Añadir Nota Personal?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Agregar múltiples destinatarios por CSV",
   "add_recipient_to_contacts_q": "¿Agregar destinatario a contactos?",
   "add_sender_as_contact": "Agregar remitente como contacto",
   "add_to_group": "Añadir a Grupo",
@@ -140,6 +141,7 @@
   "change_quantity": "Cambiar Cantidad",
   "cheap_fee": "Barato",
   "checking_for_updates": "Buscando actualizaciones...",
+  "choose_delimiter": "Elige un delimitador",
   "choose_own_passphrase": "¿Prefiere elegir su propia contraseña? Haga clic aquí.",
   "clear_results": "Limpiar Resultados",
   "clear_search_results": "Limpiar Resultados de Búsqueda",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Haga clic aquí para copiar la frase de contraseña en el portapapeles",
   "click_to_refresh": "Haga clic para actualizar",
   "close": "Cerrar",
+  "comma": "Coma",
   "comment": "Comentario",
   "complete": "Completo",
   "confirm_contact_delete": "Sí, Borrar Contacto",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Crear Encuesta",
   "create_your_account": "Crear Su Cuenta",
+  "csv_add_recipients": "Agregar destinatario utilizando CSV",
+  "csv_error_duplicated_recipient": "Destinatario duplicado",
+  "csv_error_invalid_amount": "Valor de la cantidad no válida",
+  "csv_error_max_limit_multiout": "Límite máximo para Multiout excedido. El límite es:",
+  "csv_error_max_limit_same_multiout": "Límite máximo para la misma cantidad Multiout excedido. El límite es:",
+  "csv_error_unreadable_format": "Formato ilegible",
   "current_price": "Precio Actual",
   "current_quantity": "Cantidad Actual",
   "current_version": "Versión actual",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Si pierde la contraseña, no podrá realizar ninguna transacción, es decir, se perderán sus monedas. La frase de contraseña no es recuperable. Mantenga esta frase secreta en secreto. Todos los que conocen la frase de contraseña son, de hecho, el propietario de la cuenta.",
   "message": "Mensaje",
   "message_empty": "El mensaje está vacío.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Este mensaje está cifrado.",
   "message_is_not_encrypted": "Este mensaje no está cifrado.",
+  "message_is_text": "Message is Text?",
   "messages": "Mensajes",
   "min_nr_of_options": "Nº Mínimo de Opciones",
   "minimum_fee": "Mínimo",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Atención: Su contraseña es lo que se interpone entre su cuenta y el resto del mundo. No utilice ninguna frase con sentido, especialmente si aparece en la literatura o la música. <br /><br />Nunca revele su contraseña. ¡Si la pierde, perderá el acceso a su cuenta!",
   "passphrase_write_below": "¡Su contraseña es muy importante! Para estar seguro de que la ha guardado, por favor vuelva a escribirla debajo:",
   "password_required_for_decryption": "Se necesita su contraseña para descifrar estos mensajes.",
+  "paste_csv_content": "Pegue el contenido CSV aquí",
   "payload": "Carga",
   "payload_hash": "Hash de la Carga",
   "payload_length": "Longitud de la Carga",
@@ -773,9 +783,10 @@
   "repeat": "Repetir",
   "request_burst": "Request BURST",
   "request_processing_time": "Tiempo de procesamiento de solicitud",
+  "reset_recipients": "Restablecer destinatarios",
   "returning_user_q": "¿Usuario existente?",
   "reward_recipient": "Recipiente Recompensa",
-  "same_out": "Same Amount",
+  "same_out": "La misma cantidad",
   "scoop_num": "Número de Scoop",
   "search_aliases": "Búsqueda de Alias...",
   "search_assets": "Búsqueda de Activos...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Seleccione el Esquema de Color",
   "select_contact_in_sidebar": "Por favor, seleccione un contacto en la barra lateral izquierda.",
   "select_node": "Elija Nodo",
+  "select_recipients": "Seleccionar destinatarios",
   "sell": "Vender",
   "sell_alias": "Vender Alias",
   "sell_asset_for_burst": "Vender__assetName__ por BURST",
@@ -799,6 +811,7 @@
   "seller": "Vendedor",
   "seller_account_id": "Seller's Account ID",
   "seller_products": "Productos del Vendedor",
+  "semicolon": "Punto y coma",
   "send": "Enviar",
   "send_a_message": "Enviar un Mensaje",
   "send_burst": "Enviar BURST",
@@ -901,6 +914,7 @@
   "success_valid_token": "El identificador es válido y pertenece a la cuenta __account_link__. Fue generado en __timestamp__.",
   "suggested_fee": "Tarifas sugeridas",
   "suggested_fee_help": "Tarifa barata: el 50% de la transacción de oportunidad se realizará en uno de los siguientes diez bloques. <br /> Tarifa estándar: 50% de la transacción de oportunidad se realizará en el próximo bloque. <br /> Tarifa de prioridad: el 90% de la transacción de probabilidad hará en el siguiente bloque y 99% para hacer dentro de los próximos dos bloques.",
+  "tabulator": "Tabulador",
   "tags": "Etiquetas",
   "tags_categories": "Etiquetas (categorías)",
   "tentative": "Tentativa",
