--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -19,6 +19,7 @@
   "add_message_q": "Lisää viesti?",
   "add_note_to_self_q": "Lisää viesti itselle?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Lisää useita vastaanottajia CSV: llä",
   "add_recipient_to_contacts_q": "Lisää vastaanottaja yhteystietoihin?",
   "add_sender_as_contact": "Add Sender as Contact",
   "add_to_group": "Lisää ryhmään",
@@ -140,6 +141,7 @@
   "change_quantity": "Muuta määrää",
   "cheap_fee": "halpa",
   "checking_for_updates": "Tarkistetaan päivityksiä...",
+  "choose_delimiter": "Valitse erotin",
   "choose_own_passphrase": "Haluatko valita oman tunnuslauseen? Klikkaa tästä.",
   "clear_results": "Tyhjennä  tulokset",
   "clear_search_results": "Tyhjennä hakutulokset",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Napsauttamalla tätä voit kopioida salasanan leikepöydälle",
   "click_to_refresh": "Päivitä napsauttamalla",
   "close": "Sulje",
+  "comma": "Pilkku",
   "comment": "Kommentti",
   "complete": "Valmis",
   "confirm_contact_delete": "Kyllä, poista yhteystieto",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Luo galluppi",
   "create_your_account": "Luo tili",
+  "csv_add_recipients": "Lisää vastaanottaja CSV: llä",
+  "csv_error_duplicated_recipient": "Kopioitu vastaanottaja",
+  "csv_error_invalid_amount": "Virheellinen summan arvo",
+  "csv_error_max_limit_multiout": "Multiout-enimmäisraja ylitetty. Raja on:",
+  "csv_error_max_limit_same_multiout": "Saman määrän monikerton enimmäisraja ylitetty. Raja on:",
+  "csv_error_unreadable_format": "Lukematon muoto",
   "current_price": "Nykyinen hinta",
   "current_quantity": "Nykyinen määrä",
   "current_version": "Nykyinen versio",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Jos menetät salasanan, et voi tehdä mitään tapahtumia, eli kolikot häviävät. Salasana ei ole palautettavissa. Pidä tämä salasana salassa. Jokainen, joka tietää salasanan, on tosiasiallisesti tilin omistaja.",
   "message": "Viesti",
   "message_empty": "Viesti on tyhjä.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Tämä viesti on salattu.",
   "message_is_not_encrypted": "Tätä viestiä ei ole salattu.",
+  "message_is_text": "Message is Text?",
   "messages": "Viestit",
   "min_nr_of_options": "Valintojen minimimäärä",
   "minimum_fee": "minimi",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Varoitus: Tunnuslause on kaikki mikä erottaa tilisi muusta maailmasta. Älä käytä mitään selkokielistä lausetta. Vältä erityisesti lausetta joka löytyy esim. musiikista tai kirjallisuudesta.<br /><br />Älä jaa tunnuslausettasi muille. Jos menetät sen, menetät pääsyn tiliisi!",
   "passphrase_write_below": "Tunnuslauseesi on erittäin tärkeä! Jotta olet varmasti tallentanut sen, kirjoita se vielä alle:",
   "password_required_for_decryption": "Tunnuslause tarvitaan näiden viestien purkamiseen.",
+  "paste_csv_content": "Liitä CSV-sisältö tähän",
   "payload": "Hyötykuorma",
   "payload_hash": "Hyötykuorman tarkiste",
   "payload_length": "Hyötykuorman pituus",
@@ -773,9 +783,10 @@
   "repeat": "Toista",
   "request_burst": "Request BURST",
   "request_processing_time": "Pyydä käsittelyaikaa",
+  "reset_recipients": "Nollaa vastaanottajat",
   "returning_user_q": "Vanha käyttäjä?",
   "reward_recipient": "Palkinnon saaja",
-  "same_out": "Same Amount",
+  "same_out": "Sama määrä",
   "scoop_num": "Scoop-numero",
   "search_aliases": "Hae aliasta...",
   "search_assets": "Etsi arvopaperia...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Valitse väriteema",
   "select_contact_in_sidebar": "Valitse yhteystieto vasemmasta sivupalkista.",
   "select_node": "Valitse Solmu",
+  "select_recipients": "Valitse Vastaanottajat",
   "sell": "Myy",
   "sell_alias": "Myy alias",
   "sell_asset_for_burst": "Myy __assetName__ BURST:ksi",
@@ -799,6 +811,7 @@
   "seller": "Myyjä",
   "seller_account_id": "Seller's Account ID",
   "seller_products": "Myyjän tuotteet",
+  "semicolon": "Puolipiste",
   "send": "Lähetä",
   "send_a_message": "Lähetä viesti",
   "send_burst": "Lähetä BURST",
@@ -901,6 +914,7 @@
   "success_valid_token": "Tunnus on kelvollinen ja kuuluu tilin __account_link__. Se luotiin __timestamp__.",
   "suggested_fee": "Ehdotetut maksut",
   "suggested_fee_help": "Halvat maksut: 50%: n todennäköisyystapahtuma tekee siitä yhdellä seuraavista kymmenestä lohkosta. <br /> Perusmaksu: 50%: n todennäköisyystapahtuma tekee sen seuraavassa lohkossa. <br /> Ensisijainen maksu: 90%: n todennäköisyystapahtuma tekee se seuraavassa lohkossa ja 99% seuraavien kahden lohkon sisällä.",
+  "tabulator": "tabulaattori",
   "tags": "Tagit",
   "tags_categories": "Tagit (kategoriat)",
   "tentative": "Alustava",
