--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -19,6 +19,7 @@
   "add_message_q": "¿Engadir unha mensaxe?",
   "add_note_to_self_q": "Add Note to Self?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Engadindo varios destinatarios por CSV",
   "add_recipient_to_contacts_q": "¿Engadir destinatario a contactos?",
   "add_sender_as_contact": "Add Sender as Contact",
   "add_to_group": "Engadir a grupo",
@@ -140,6 +141,7 @@
   "change_quantity": "Cambiar cantidade",
   "cheap_fee": "Barato",
   "checking_for_updates": "Checking for updates...",
+  "choose_delimiter": "Elixe un Delimitador",
   "choose_own_passphrase": "¿Prefire elexila súa propia contrasinal? faga clic aquí.",
   "clear_results": "Clear Results",
   "clear_search_results": "Limpar resultados de búsqueda",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Fai clic aquí para copiar o contrasinal no portapapeis",
   "click_to_refresh": "Fai clic para actualizar",
   "close": "Close",
+  "comma": "Coma",
   "comment": "Comentario",
   "complete": "Completo",
   "confirm_contact_delete": "Sí, borrar contacto",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Cree unha enquisa",
   "create_your_account": "Creala súa conta",
+  "csv_add_recipients": "Engade destinatario usando CSV",
+  "csv_error_duplicated_recipient": "Destinatario duplicado",
+  "csv_error_invalid_amount": "O valor da cantidade non é válido",
+  "csv_error_max_limit_multiout": "Superou o límite máximo para o multiplemento. O límite é:",
+  "csv_error_max_limit_same_multiout": "Superou o límite máximo para a mesma cantidade multiout. O límite é:",
+  "csv_error_unreadable_format": "Formato ilexible",
   "current_price": "Prezo actual",
   "current_quantity": "Cantidade actual",
   "current_version": "Versión actual",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Se perde a frase de contrasinal, non poderás realizar ningunha transacción, é dicir, as túas moedas están perdidas. A frase de acceso non é recuperable. Manter este contrasinal secreto. Todos os que coñecen o contrasinal son de feito o dono da conta.",
   "message": "Mensaxe",
   "message_empty": "Message is empty.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "This message is encrypted.",
   "message_is_not_encrypted": "This message is not encrypted.",
+  "message_is_text": "Message is Text?",
   "messages": "Mensaxes",
   "min_nr_of_options": "Nº mínimo de opcións",
   "minimum_fee": "Mínimo",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Atención: O seu contrasinal é o que se interpón entre a súa conta e o resto do mundo. Non empregue ningunha frase con sentido, especialmente se aparece en literatura ou música. <br /><br />Nunca revele o seu contrasinal. ¡Se o perde, perderá o acceso a súa conta!",
   "passphrase_write_below": "¡O seu contrasinal é moi importante! Para estar seguro de que o ten gardado, por favor vólvao a escribir embaixo:",
   "password_required_for_decryption": "Requírese o seu contrasinal para descifrar estas mensaxes.",
+  "paste_csv_content": "Pega o contido CSV aquí",
   "payload": "Carga",
   "payload_hash": "Hash da carga",
   "payload_length": "Lonxitude da carga",
@@ -773,9 +783,10 @@
   "repeat": "Repetir",
   "request_burst": "Request BURST",
   "request_processing_time": "Tempo de procesamento de solicitudes",
+  "reset_recipients": "Restablecer destinatarios",
   "returning_user_q": "¿Usuario existente?",
   "reward_recipient": "Destinatario de recompensa",
-  "same_out": "Same Amount",
+  "same_out": "Mesmo importe",
   "scoop_num": "Número de Scoop",
   "search_aliases": "Búsqueda de Alias...",
   "search_assets": "Búsqueda de activos...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Seleccione o esquema de color",
   "select_contact_in_sidebar": "Por favor seleccione un contacto na barra lateral esquerda.",
   "select_node": "Escolla Nodo",
+  "select_recipients": "Seleccione Destinatarios",
   "sell": "Vender",
   "sell_alias": "Vender Alias",
   "sell_asset_for_burst": "Vender __assetName__ por BURST",
@@ -799,6 +811,7 @@
   "seller": "Vendedor",
   "seller_account_id": "Seller's Account ID",
   "seller_products": "Productos do vendedor",
+  "semicolon": "Punto e coma",
   "send": "Enviar",
   "send_a_message": "Enviar unha mensaxe",
   "send_burst": "Enviar BURST",
@@ -901,6 +914,7 @@
   "success_valid_token": "O identificador é válido e pertence á conta __account_link__. Foi xerado en __timestamp__.",
   "suggested_fee": "Tarifas suxeridas",
   "suggested_fee_help": "Tarifa barata: a transacción do 50% de posibilidades farase nun dos próximos dez bloques. <br /> Tarifa estándar: a transacción do 50% de posibilidades farase no seguinte bloque. <br /> Tarifa de prioridade: fará un 90% de transaccións por casualidade no seguinte bloque e un 99% dentro dos próximos dous bloques.",
+  "tabulator": "Tabulador",
   "tags": "Etiquetas",
   "tags_categories": "Etiquetas (categorías)",
   "tentative": "Tentativa",
