--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -19,6 +19,7 @@
   "add_message_q": "Dodaj poruku?",
   "add_note_to_self_q": "Dodajte poruku za sebe?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Dodavanje više primatelja od strane CSV-a",
   "add_recipient_to_contacts_q": "Dodaj primatelja u kontakte?",
   "add_sender_as_contact": "Dodajte Pošiljaoca u Kontakte",
   "add_to_group": "Dodaj u grupu",
@@ -140,6 +141,7 @@
   "change_quantity": "Promijenite količinu",
   "cheap_fee": "jeftino",
   "checking_for_updates": "Provjera nove verzije je u toku...",
+  "choose_delimiter": "Odaberite razdjelnik",
   "choose_own_passphrase": "Želite odabrati vlastitu lozinku? Kliknite ovdje.",
   "clear_results": "Obriši Rezultate",
   "clear_search_results": "Obriši rezultate pretraživanja",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Kliknite ovdje da biste kopirali zaporku u međuspremnik",
   "click_to_refresh": "Kliknite za osvježavanje",
   "close": "Zatvori",
+  "comma": "Zarez",
   "comment": "Komentar",
   "complete": "Gotovo",
   "confirm_contact_delete": "Da, obriši kontakt",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Kreiraj anketu",
   "create_your_account": "Kreirajte vaš račun",
+  "csv_add_recipients": "Dodajte primatelja pomoću CSV-a",
+  "csv_error_duplicated_recipient": "Duplirani primatelj",
+  "csv_error_invalid_amount": "Nevažeća vrijednost iznosa",
+  "csv_error_max_limit_multiout": "Premašena je maksimalna granica za Multiout. Ograničenje je:",
+  "csv_error_max_limit_same_multiout": "Maksimalni limit za isti iznos višestruke vrijednosti je premašen. Ograničenje je:",
+  "csv_error_unreadable_format": "Nečitljiv format",
   "current_price": "Trenutna cijena",
   "current_quantity": "Trenutna količina",
   "current_version": "Trenutna verzija",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Ako izgubite zaporku, nećete moći obavljati nikakve transakcije, tj. Izgubljeni kovanice. Zaporka se ne može vratiti. Čuvajte ovu tajnu zaporke. Svatko tko zna zaporku de facto je vlasnik računa.",
   "message": "Poruka",
   "message_empty": "Poruka je prazna.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Ova poruka je zaštićena.",
   "message_is_not_encrypted": "Ova poruka nije zaštićena.",
+  "message_is_text": "Message is Text?",
   "messages": "Poruke",
   "min_nr_of_options": "Minimalni broj opcija",
   "minimum_fee": "Minimum",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Upozorenje: Lozinka je jedino što dijeli vaš račun od ostatka svijeta. Ne koristite poznate rečenice, posebno izbjegavate one iz popularnih pjesama i proze.<br /><br />Nikad ne pokazujte vašu lozinku. Ako ju izgubite, izgubili ste pristup vašem računu i svemu što se na njemu nalazi!",
   "passphrase_write_below": "Vaša fraza predstavlja vašu lozinku i vrlo je važna! Kako bismo se uvjerili da ste ju spremili, molimo upišite ju ponovo u ponuđeni formular:",
   "password_required_for_decryption": "Vaša lozinka je potrebna za dekodiranje ove poruke.",
+  "paste_csv_content": "Ovdje zalijepite CSV sadržaj",
   "payload": "Plaćeni teret",
   "payload_hash": "Težina hasha",
   "payload_length": "Payload Length",
@@ -773,9 +783,10 @@
   "repeat": "Ponovite",
   "request_burst": "Request BURST",
   "request_processing_time": "Zahtjev za obradu vremena",
+  "reset_recipients": "Poništite primatelje",
   "returning_user_q": "Korisnik povratnik?",
   "reward_recipient": "Nagrađeni primatelj",
-  "same_out": "Same Amount",
+  "same_out": "Isti iznos",
   "scoop_num": "Broj Scoop",
   "search_aliases": "Traži pseudonime...",
   "search_assets": "Traži Assete...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Odaberite shemu boje",
   "select_contact_in_sidebar": "Molimo odaberite kontakt u lijevom stupcu.",
   "select_node": "Odaberite Čvor",
+  "select_recipients": "Odaberite Primatelji",
   "sell": "Prodaj",
   "sell_alias": "Prodaj pseudonime",
   "sell_asset_for_burst": "Prodaj __assetName__ za BURST",
@@ -799,6 +811,7 @@
   "seller": "Prodavač",
   "seller_account_id": "Seller's Account ID",
   "seller_products": "Proizvodi prodavača",
+  "semicolon": "Točka i zarez",
   "send": "Pošalji",
   "send_a_message": "Pošalji poruku",
   "send_burst": "Pošalji BURST",
@@ -901,6 +914,7 @@
   "success_valid_token": "Taj token je valjan i pripada računu __account_link__. Generiran je u __timestamp__.",
   "suggested_fee": "Predložene naknade",
   "suggested_fee_help": "Jeftina naknada: 50% vjerojatnost da će se transakcija ostvariti u jednom od sljedećih deset blokova. <br /> Standardna naknada: 50% vjerojatnost transakcije će se ostvariti u sljedećem bloku. <br /> Prioritetna naknada: 90% vjerojatnost transakcije u sljedećem bloku i 99% u sljedeća dva bloka.",
+  "tabulator": "Tabulator",
   "tags": "Tagovi",
   "tags_categories": "Oznake (kategorije)",
   "tentative": "Privremeni",
