--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -19,6 +19,7 @@
   "add_message_q": "Tambahkan pesan?",
   "add_note_to_self_q": "Tambahkan catatan untuk diri sendiri?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Menambahkan beberapa penerima dengan CSV",
   "add_recipient_to_contacts_q": "Menambahkan penerima ke kontak?",
   "add_sender_as_contact": "Add Sender as Contact",
   "add_to_group": "Tambahkan ke Grup",
@@ -140,6 +141,7 @@
   "change_quantity": "Mengubah kuantitas",
   "cheap_fee": "Murah",
   "checking_for_updates": "Memeriksa pembaruan...",
+  "choose_delimiter": "Pilih Pembatas",
   "choose_own_passphrase": "Untuk memilih password Anda sendiri? Klik di sini.",
   "clear_results": "Hapus hasil",
   "clear_search_results": "Menghapus Hasil Pencarian",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Klik di sini untuk menyalin frasa sandi ke clipboard",
   "click_to_refresh": "Klik untuk menyegarkan",
   "close": "Tutup",
+  "comma": "Koma",
   "comment": "Komentar",
   "complete": "Menyelesaikan",
   "confirm_contact_delete": "Ya, Menghapus Kontak",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Buat Pemilihan",
   "create_your_account": "Membuat akun",
+  "csv_add_recipients": "Tambahkan Penerima menggunakan CSV",
+  "csv_error_duplicated_recipient": "Penerima Gandakan",
+  "csv_error_invalid_amount": "Nilai jumlah tidak valid",
+  "csv_error_max_limit_multiout": "Batas Maksimum untuk Multiout terlampaui. Batasnya adalah:",
+  "csv_error_max_limit_same_multiout": "Batas Maksimum untuk Jumlah yang Sama Multiout terlampaui. Batasnya adalah:",
+  "csv_error_unreadable_format": "Format tidak dapat dibaca",
   "current_price": "Harga saat ini",
   "current_quantity": "Saat ini jumlah",
   "current_version": "Versi sekarang",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Jika Anda kehilangan frasa sandi, Anda tidak akan dapat melakukan transaksi, mis. Koin Anda hilang. Frasa sandi tidak dapat dipulihkan. Jaga kerahasiaan kata sandi ini. Semua orang yang tahu frasa sandi adalah pemilik akun itu.",
   "message": "Pesan",
   "message_empty": "Pesan kosong.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Pesan ini dienkripsi.",
   "message_is_not_encrypted": "Pesan ini tidak dienkripsi.",
+  "message_is_text": "Message is Text?",
   "messages": "Pesan",
   "min_nr_of_options": "Jumlah minimal Pilihan",
   "minimum_fee": "Minimum",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Perhatian: Sandi melindungi akun Anda dari pencuri. Di internet seluruh dunia kadang-kadang dapat melihat password Anda. Jangan gunakan kalimat terkenal, dari lagu atau sastra. Pilih sesuatu yang sangat sulit.<br /><br />Jangan memberitahu orang lain password Anda. Jika Anda kehilangan ini Anda kehilangan akses ke akun Anda!",
   "passphrase_write_below": "Sandi sangat penting! Untuk memeriksa Anda telah menyimpannya, silakan menulis sandi di bawah ini:",
   "password_required_for_decryption": "Sandi diperlukan untuk mengenkripsi pesan ini.",
+  "paste_csv_content": "Tempel konten CSV di sini",
   "payload": "Membayar beban",
   "payload_hash": "membayar beban Hash",
   "payload_length": "membayar beban panjang",
@@ -773,9 +783,10 @@
   "repeat": "Ulangi",
   "request_burst": "Request BURST",
   "request_processing_time": "Permintaan Waktu Pemrosesan",
+  "reset_recipients": "Setel ulang Penerima",
   "returning_user_q": "Kembali pengguna?",
   "reward_recipient": "Penerima Hadiah",
-  "same_out": "Same Amount",
+  "same_out": "Sama banyak",
   "scoop_num": "Jumlah sendok",
   "search_aliases": "Alias Cari...",
   "search_assets": "Cari Aset...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Pilih skema warna",
   "select_contact_in_sidebar": "Silahkan pilih kontak di sidebar kiri.",
   "select_node": "Pilih Node",
+  "select_recipients": "Pilih Penerima",
   "sell": "Menjual",
   "sell_alias": "Menjual Alias",
   "sell_asset_for_burst": "Jual __assetName__ untuk BURST",
@@ -799,6 +811,7 @@
   "seller": "Penjual",
   "seller_account_id": "Seller's Account ID",
   "seller_products": "Penjual produk",
+  "semicolon": "Titik koma",
   "send": "Kirim",
   "send_a_message": "Mengirim Pesan",
   "send_burst": "Kirim BURST",
@@ -901,6 +914,7 @@
   "success_valid_token": "Token sah dan milik __account_link__ akun. Dibuat pada __timestamp__.",
   "suggested_fee": "Biaya yang disarankan",
   "suggested_fee_help": "Biaya murah: 50% peluang transaksi akan masuk dalam salah satu dari sepuluh blok berikutnya. <br /> Biaya standar: 50% peluang transaksi akan berhasil di blok berikutnya. <br /> Biaya prioritas: 90% peluang transaksi akan terjadi di blok berikutnya dan 99% untuk membuat dalam dua blok berikutnya.",
+  "tabulator": "Tabulator",
   "tags": "Tag",
   "tags_categories": "Tag (kategori)",
   "tentative": "Tentatif",
