--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -19,6 +19,7 @@
   "add_message_q": "Aggiungi un messaggio?",
   "add_note_to_self_q": "Add Note to Self?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Aggiunta di più destinatari per CSV",
   "add_recipient_to_contacts_q": "Aggiungi destinatario ai contatti?",
   "add_sender_as_contact": "Add Sender as Contact",
   "add_to_group": "Aggiungi al gruppo",
@@ -140,6 +141,7 @@
   "change_quantity": "Modificare la quantità",
   "cheap_fee": "A buon mercato",
   "checking_for_updates": "Checking for updates...",
+  "choose_delimiter": "Scegli un delimitatore",
   "choose_own_passphrase": "Vuoi scegliere la propria passphrase? Clicca qui.",
   "clear_results": "Clear Results",
   "clear_search_results": "Rimuovi risultati di ricerca",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Clicca qui per copiare la passphrase negli appunti",
   "click_to_refresh": "Clicca per aggiornare",
   "close": "Chiudi",
+  "comma": "Virgola",
   "comment": "Commento",
   "complete": "Completo",
   "confirm_contact_delete": "Sì, Elimina contatto",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Crea sondaggio",
   "create_your_account": "Crea il tuo Account",
+  "csv_add_recipients": "Aggiungi destinatario tramite CSV",
+  "csv_error_duplicated_recipient": "Destinatario duplicato",
+  "csv_error_invalid_amount": "Valore dell'importo non valido",
+  "csv_error_max_limit_multiout": "Limite massimo per Multiout superato. Il limite è:",
+  "csv_error_max_limit_same_multiout": "Limite massimo per lo stesso importo Multiout superato. Il limite è:",
+  "csv_error_unreadable_format": "Formato illeggibile",
   "current_price": "Prezzo attuale",
   "current_quantity": "Quantità attuale",
   "current_version": "Versione corrente",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Se perdi la passphrase non sarai in grado di fare alcuna transazione, cioè le tue monete andranno perse. La passphrase non è recuperabile. Tieni segreto questo passphrase. Chiunque conosca la passphrase è di fatto il proprietario dell'account.",
   "message": "Messaggio",
   "message_empty": "Message is empty.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "This message is encrypted.",
   "message_is_not_encrypted": "This message is not encrypted.",
+  "message_is_text": "Message is Text?",
   "messages": "Messaggi",
   "min_nr_of_options": "Nr minimo di opzioni",
   "minimum_fee": "Minimo",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Attenzione: la passphrase è tutto ciò che sta tra il tuo account e il resto del mondo. Non utilizzare frasi con un senso, soprattutto quelle che compaiono in canzoni o letteratura. <br /><br />Non rivelare mai la passphrase. Se la perdi perdi l'accesso al tuo account!",
   "passphrase_write_below": "La passphrase è molto importante! Per essere sicuro che l'hai salvata, scrivi la tua password qui sotto:",
   "password_required_for_decryption": "La passphrase è necessaria per decriptare questi messaggi.",
+  "paste_csv_content": "Incolla qui il contenuto CSV",
   "payload": "Carico",
   "payload_hash": "Hash del carico",
   "payload_length": "Lunghezza del carico",
@@ -773,9 +783,10 @@
   "repeat": "Ripeti",
   "request_burst": "Request BURST",
   "request_processing_time": "Richiedi tempo di elaborazione",
+  "reset_recipients": "Ripristina destinatari",
   "returning_user_q": "Utente già registrato?",
   "reward_recipient": "Ricompensa",
-  "same_out": "Same Amount",
+  "same_out": "La stessa quantità",
   "scoop_num": "Numero del mestolo",
   "search_aliases": "Ricerca alias...",
   "search_assets": "Ricerca Asset...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Selezionare la combinazione di colori",
   "select_contact_in_sidebar": "Si prega di selezionare un contatto dalla barra laterale di sinistra.",
   "select_node": "Scegli Nodo",
+  "select_recipients": "Seleziona destinatari",
   "sell": "Venda",
   "sell_alias": "Vendi Alias",
   "sell_asset_for_burst": "Vendi __assetName__ per BURST",
@@ -799,6 +811,7 @@
   "seller": "Venditore",
   "seller_account_id": "Seller's Account ID",
   "seller_products": "Prodotti del venditore",
+  "semicolon": "Punto e virgola",
   "send": "Invia",
   "send_a_message": "Invia un messaggio",
   "send_burst": "Invia BURST",
@@ -901,6 +914,7 @@
   "success_valid_token": "Il token è valido e appartiene al conto __account_link__. È stato generato il __timestamp__.",
   "suggested_fee": "Tasse suggerite",
   "suggested_fee_help": "Tariffa economica: la transazione del 50% di probabilità lo farà in uno dei prossimi dieci blocchi. <br /> Tariffa standard: la transazione del 50% di probabilità lo farà nel blocco successivo. <br /> Commissione di priorità: il 90% della transazione casuale farà nel prossimo blocco e il 99% da fare entro i prossimi due blocchi.",
+  "tabulator": "Tabulator",
   "tags": "Tag",
   "tags_categories": "Tags (categorie)",
   "tentative": "Tentativo",
