--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -19,6 +19,7 @@
   "add_message_q": "メッセージを追加しますか？",
   "add_note_to_self_q": "自分へのメモを追加しますか。",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "CSVによる複数の受信者の追加",
   "add_recipient_to_contacts_q": "受信者を連絡先に追加しますか？",
   "add_sender_as_contact": "Add Sender as Contact",
   "add_to_group": "グループに追加",
@@ -140,6 +141,7 @@
   "change_quantity": "数量の変更",
   "cheap_fee": "安いです",
   "checking_for_updates": "アップデートを確認中…",
+  "choose_delimiter": "区切り文字を選択してください",
   "choose_own_passphrase": "独自のパスフレーズを選択したい場合は、ここをクリックしてください。",
   "clear_results": "結果をクリア",
   "clear_search_results": "検索結果をクリア",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "パスフレーズをクリップボードにコピーするには、ここをクリックしてください。",
   "click_to_refresh": "クリックして更新",
   "close": "閉じる",
+  "comma": "コンマ",
   "comment": "コメント",
   "complete": "完了",
   "confirm_contact_delete": "はい、連絡先を削除します",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "投票調査を作成",
   "create_your_account": "アカウントを作成",
+  "csv_add_recipients": "CSVを使用して受信者を追加",
+  "csv_error_duplicated_recipient": "重複した受信者",
+  "csv_error_invalid_amount": "無効な金額値",
+  "csv_error_max_limit_multiout": "マルチアウトの最大制限を超えました。制限は次のとおりです。",
+  "csv_error_max_limit_same_multiout": "同量マルチアウトの最大制限を超えました。制限は次のとおりです。",
+  "csv_error_unreadable_format": "判読できない形式",
   "current_price": "現在の価格",
   "current_quantity": "現在の数量",
   "current_version": "現行版",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "あなたがパスフレーズを失うならば、あなたはどんな取引もすることができないでしょう、すなわちあなたのコインは失われます。パスフレーズは回復できません。このパスフレーズを秘密にしてください。パスフレーズを知っている人はだれでも事実上アカウントの所有者です。",
   "message": "メッセージ",
   "message_empty": "メッセージが空です。",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "このメッセージは暗号化されます。",
   "message_is_not_encrypted": "このメッセージは暗号化されません。",
+  "message_is_text": "Message is Text?",
   "messages": "メッセージ",
   "min_nr_of_options": "オプションの最小数",
   "minimum_fee": "最小",
@@ -685,6 +694,7 @@
   "passphrase_warning": "注意： パスフレーズは、あなたのアカウントと他の世界をつなぐ間に立つ全てです。意味のある文章、特に歌や文学でつかわれるものを使用しないでください。< br/> < br/> 絶対にパスフレーズを開示してはいけません。紛失した場合、アカウントへのアクセスを失うことになります！",
   "passphrase_write_below": "パスフレーズは非常に重要です！ あなたが保存していることを確認するために、以下にパスフレーズを書いてください：",
   "password_required_for_decryption": "このメッセージを復号化するには、あなたのパスフレーズが必要です。",
+  "paste_csv_content": "ここにCSVコンテンツを貼り付けます",
   "payload": "ペイロード",
   "payload_hash": "ペイロードのハッシュ",
   "payload_length": "ペイロードの長さ",
@@ -773,9 +783,10 @@
   "repeat": "リピート",
   "request_burst": "Request BURST",
   "request_processing_time": "リクエスト処理時間",
+  "reset_recipients": "受信者をリセット",
   "returning_user_q": "以前ご利用になられたユーザーですか",
   "reward_recipient": "報酬受取人",
-  "same_out": "Same Amount",
+  "same_out": "同額",
   "scoop_num": "スクープ番号",
   "search_aliases": "エイリアスを検索",
   "search_assets": "資産を検索",
@@ -788,6 +799,7 @@
   "select_color_scheme": "配色を選択",
   "select_contact_in_sidebar": "左のサイドバーで連絡先を選択してください。",
   "select_node": "ノードを選択",
+  "select_recipients": "受信者を選択",
   "sell": "販売",
   "sell_alias": "エイリアスを販売",
   "sell_asset_for_burst": "__assetName__をBURSTで販売",
@@ -799,6 +811,7 @@
   "seller": "売り手",
   "seller_account_id": "Seller's Account ID",
   "seller_products": "売り手の製品",
+  "semicolon": "セミコロン",
   "send": "送信",
   "send_a_message": "メッセージを送信",
   "send_burst": "BURST を送信",
@@ -901,6 +914,7 @@
   "success_valid_token": "このトークンは有効で、アカウント__account_link__ のものです。それは__timestamp__ に生成されました。",
   "suggested_fee": "提案された料金",
   "suggested_fee_help": "安い料金：50％のチャンスの取引は次の10ブロックのうちの1つになります。<br />標準料金：50％のチャンスの取引は次のブロックにそれをします。<br />優先料金：90％の可能性があるトランザクション次の2つのブロックの中で作るためにそれは次のブロックと99％にあります。",
+  "tabulator": "タブ",
   "tags": "タグ",
   "tags_categories": "タグ（カテゴリ）",
   "tentative": "仮決め",
