--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -19,6 +19,7 @@
   "add_message_q": "Pridėti žinutę?",
   "add_note_to_self_q": "Pridėti pastabą sau?",
   "add_recipient": "Pridėti gavėją",
+  "add_recipient_batch": "Kelių gavėjų įtraukimas naudojant CSV",
   "add_recipient_to_contacts_q": "Įtraukti gavėją į kontaktus?",
   "add_sender_as_contact": "Įtraukti Siuntėją į kontaktus",
   "add_to_group": "Įtraukti į grupę",
@@ -140,6 +141,7 @@
   "change_quantity": "Keisti kiekį",
   "cheap_fee": "Pigus mokestis",
   "checking_for_updates": "Ieškoma atnaujinimų...",
+  "choose_delimiter": "Pasirinkite atskyriklį",
   "choose_own_passphrase": "Norite pasirinkti savo slaptažodį? Spauskite čia.",
   "clear_results": "Išvalyti rezultatus",
   "clear_search_results": "Išvalyti paieškos rezultatus",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Spustelėkite čia, jei norite kopijuoti slaptą frazę į iškarpinę",
   "click_to_refresh": "Spustelėkite, jei norite atnaujinti",
   "close": "Uždaryti",
+  "comma": "Kablelis",
   "comment": "Komentuoti",
   "complete": "Pabaigta",
   "confirm_contact_delete": "Taip, panaikinti kontaktą",
@@ -183,6 +186,12 @@
   "create_passive": "Sukurti sąskaita be slaptos frazės",
   "create_poll": "Sukurti apklausą",
   "create_your_account": "Sukurkite savo sąskaitą",
+  "csv_add_recipients": "Pridėti gavėją naudodami CSV",
+  "csv_error_duplicated_recipient": "Kopijuotas gavėjas",
+  "csv_error_invalid_amount": "Neteisinga sumos vertė",
+  "csv_error_max_limit_multiout": "Viršyta maksimali daugialypės terpės riba. Riba yra:",
+  "csv_error_max_limit_same_multiout": "Viršytas maksimalus tos pačios sumos pakeitimas. Riba yra:",
+  "csv_error_unreadable_format": "Neįskaitomas formatas",
   "current_price": "Dabartinė kaina",
   "current_quantity": "Einamasis kiekis",
   "current_version": "Dabartinė versija",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Jei prarandate slaptafrazę, negalėsite atlikti jokių operacijų, t. Y. Jūsų monetos prarandamos. Slaptafrazė nėra atkuriama. Laikykite šią slaptafrazę paslaptyje. Visi, kurie žino slaptafrazę, de facto yra paskyros savininkas.",
   "message": "Žinutė",
   "message_empty": "Žinutė yra tuščia.",
-  "message_is_text": "Žinutė yra tekstas?",
   "message_is_encrypted": "Ši žinutė yra šifruota.",
   "message_is_not_encrypted": "Ši žinutė neužšifruota.",
+  "message_is_text": "Žinutė yra tekstas?",
   "messages": "Žinutės",
   "min_nr_of_options": "Minimalus pasirinkimų kiekis",
   "minimum_fee": "Minimumas",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Dėmesio: slaptažodis yra viskas, kas stovi tarp Jūsų sąskaitos ir pasaulio. Nenaudokite standartinių sakinių, ypač jei jie yra iš dainos ar literatūros. < br / > < br / >Niekada neatskleiskite savo slaptažodžio. Jei jį prarasite, prarasite ir prieigą prie savo sąskaitos!",
   "passphrase_write_below": "Jūsų slaptažodis yra labai svarbus! Siekiant įsitikinti, kad jį išsaugojote, prašome įrašyti savo slaptažodį žemiau:",
   "password_required_for_decryption": "Norint iššifruoti šiuos pranešimus, reikalingas Jūsų slaptažodis.",
+  "paste_csv_content": "Čia įklijuokite CSV turinį",
   "payload": "Payload",
   "payload_hash": "Payload Hash",
   "payload_length": "Payload ilgis",
@@ -773,6 +783,7 @@
   "repeat": "Kartoti",
   "request_burst": "Request BURST",
   "request_processing_time": "Prašyti apdorojimo laiko",
+  "reset_recipients": "Iš naujo nustatyti gavėjus",
   "returning_user_q": "Esamas vartotojas?",
   "reward_recipient": "Atlygis Gavėjas",
   "same_out": "Taspats kiekis",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Pasirinkite spalvų schemą",
   "select_contact_in_sidebar": "Kairiajame meniu pasirinkite kontaktą.",
   "select_node": "Pasirinkite mazgas",
+  "select_recipients": "Pasirinkite Gavėjai",
   "sell": "Parduoti",
   "sell_alias": "Parduoti pseudonimą",
   "sell_asset_for_burst": "Parduoti __assetName__ už BURST",
@@ -799,6 +811,7 @@
   "seller": "Pardavėjas",
   "seller_account_id": "Pardavėjo sąskaitos ID",
   "seller_products": "Pardavėjo produktai",
+  "semicolon": "Kabliataškis",
   "send": "Siųsti",
   "send_a_message": "Siųsti žinutę",
   "send_burst": "Siųsti BURST",
@@ -901,6 +914,7 @@
   "success_valid_token": "Atpažinimo ženklas galioja ir priklauso __account_link__. Jis buvo sukurtas __timestamp__.",
   "suggested_fee": "Siūlomi mokesčiai",
   "suggested_fee_help": "Pigus mokestis: 50% atsitiktinumo sandoris jį pavers vienu iš dešimties blokų. <br /> Standartinis mokestis: 50% tikimybės sandoris jį pavers į kitą bloką. <br /> Prioritetas: 90% tikimybė kitame bloke ir 99% per kitus du blokus.",
+  "tabulator": "Tabuliatorius",
   "tags": "Žymos",
   "tags_categories": "Žymos (kategorijos)",
   "tentative": "Bandomasis",
