--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -19,6 +19,7 @@
   "add_message_q": "Chcesz dodać wiadomość?",
   "add_note_to_self_q": "Chcesz dodać notatkę dla siebie?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Dodanie wielu odbiorców przez CSV",
   "add_recipient_to_contacts_q": "Chcesz dodać odbiorcę do kontaktów?",
   "add_sender_as_contact": "Dodaj nadawcę do kontaktów",
   "add_to_group": "Dodaj do grupy",
@@ -140,6 +141,7 @@
   "change_quantity": "Zmień ilość",
   "cheap_fee": "Tani",
   "checking_for_updates": "Szukam aktualizacji...",
+  "choose_delimiter": "Wybierz ogranicznik",
   "choose_own_passphrase": "Chcesz wprowadzić swoje hasło? Naciśnij tutaj.",
   "clear_results": "Wyczyść wyniki",
   "clear_search_results": "Wyczyść wyniki wyszukiwania",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Kliknij tutaj, aby skopiować hasło do schowka",
   "click_to_refresh": "Kliknij, aby odświeżyć",
   "close": "Zamknij",
+  "comma": "Przecinek",
   "comment": "Komentarz",
   "complete": "Zakończono",
   "confirm_contact_delete": "Tak, usuń kontakt",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Utwórz ankietę",
   "create_your_account": "Utwórz konto",
+  "csv_add_recipients": "Dodaj odbiorcę za pomocą CSV",
+  "csv_error_duplicated_recipient": "Zduplikowany odbiorca",
+  "csv_error_invalid_amount": "Nieprawidłowa wartość kwoty",
+  "csv_error_max_limit_multiout": "Przekroczono maksymalny limit Multiout. Limit wynosi:",
+  "csv_error_max_limit_same_multiout": "Przekroczono maksymalny limit dla tej samej kwoty Multiout. Limit wynosi:",
+  "csv_error_unreadable_format": "Nieczytelny format",
   "current_price": "Aktualna cena",
   "current_quantity": "Aktualna ilość",
   "current_version": "Obecna wersja",
@@ -575,9 +584,9 @@
   "memorize_passphrase_help_addon": "Jeśli stracisz hasło, nie będziesz mógł wykonywać żadnych transakcji, tzn. Twoje monety zostaną utracone. Hasło nie można odzyskać. Zachowaj to hasło w tajemnicy. Każdy, kto zna hasło, jest de facto właścicielem konta.",
   "message": "Wiadomość",
   "message_empty": "Wiadomość jest pust",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Wiadomość jest zaszyfrowana.",
   "message_is_not_encrypted": "Wiadomość nie jest zaszyfrowana.",
+  "message_is_text": "Message is Text?",
   "messages": "Wiadomośći",
   "min_nr_of_options": "Minimalna ilość opcji",
   "minimum_fee": "Minimum",
@@ -694,6 +703,7 @@
   "passphrase_warning": "Uwaga: Tylko hasło oddziela Cie od reszty świata. Nie używaj jako hasło popularnych zwrotów.<br /><br />Nigdy nie ujawniaj hasła. Jeśli stracisz hasło, utracisz dostęp do konta!",
   "passphrase_write_below": "Hasło jest bardzo ważne! Żeby mieć pewność ze je zapisałeś, powtórz je tutaj:",
   "password_required_for_decryption": "Hasło jest wymagane do zdeszyfrowania.",
+  "paste_csv_content": "Wklej tutaj treść CSV",
   "payload": "Ładunek",
   "payload_hash": "Hash ładunku",
   "payload_length": "Długość ładunku",
@@ -782,9 +792,10 @@
   "repeat": "Powtórz",
   "request_burst": "Request BURST",
   "request_processing_time": "Żądaj czasu przetwarzania",
+  "reset_recipients": "Zresetuj odbiorców",
   "returning_user_q": "Powracający użytkownik?",
   "reward_recipient": "Odbiorca nagrody",
-  "same_out": "Ta sama ilość",
+  "same_out": "Taka sama ilość",
   "scoop_num": "Numer miarki",
   "search_aliases": "Szukaj Aliasu...",
   "search_assets": "Szukaj Aktywa...",
@@ -797,6 +808,7 @@
   "select_color_scheme": "Wybierz schemat koloru",
   "select_contact_in_sidebar": "Proszę wybrać kontakt po lewej.",
   "select_node": "Wybierz Węzeł",
+  "select_recipients": "Wybierz odbiorców",
   "sell": "Sprzedaj",
   "sell_alias": "Sprzedaj Alias",
   "sell_asset_for_burst": "Sprzedaj __assetName__ za BURST",
@@ -808,6 +820,7 @@
   "seller": "Sprzedający",
   "seller_account_id": "Id konta sprzedającego",
   "seller_products": "Produkty sprzedającego",
+  "semicolon": "Średnik",
   "send": "Wyślij",
   "send_a_message": "Wyślij wiadomość",
   "send_burst": "Wyślij BURST",
@@ -910,6 +923,7 @@
   "success_valid_token": "Token jest ważny i należy do konta __account_link__. Został wygenerowany __timestamp__.",
   "suggested_fee": "Sugerowane opłaty",
   "suggested_fee_help": "Tania opłata: 50% szansa na transakcję trafi do jednego z kolejnych dziesięciu bloków. <br /> Opłata standardowa: transakcja 50% szansy trafi do następnego bloku. <br /> Opłata priorytetowa: transakcja 90% szansy w następnym bloku i 99%, aby wykonać w ciągu dwóch kolejnych bloków.",
+  "tabulator": "Tabulator",
   "tags": "Tagi",
   "tags_categories": "Tagi (kategorie)",
   "tentative": "Orientacyjny",
