--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -19,6 +19,7 @@
   "add_message_q": "Doriți sa adăugați un mesaj?",
   "add_note_to_self_q": "Doriți sa adăugați o notiță?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Adăugarea mai multor destinatari de către CSV",
   "add_recipient_to_contacts_q": "Doriți să adăugați destinatarul la contacte?",
   "add_sender_as_contact": "Adăugați expeditorul la contacte",
   "add_to_group": "Adăugați la grup",
@@ -140,6 +141,7 @@
   "change_quantity": "Modifică Cantitate",
   "cheap_fee": "Ieftin",
   "checking_for_updates": "Căutare actualizări...",
+  "choose_delimiter": "Alegeți un Delimiter",
   "choose_own_passphrase": "Dorești să alegi propria parolă? Fă clic aici.",
   "clear_results": "Șterge rezultate",
   "clear_search_results": "Șterge Rezultate Căutare",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Faceți clic aici pentru a copia fraza de acces în clipboard",
   "click_to_refresh": "Faceți clic pentru a actualiza",
   "close": "Închidere",
+  "comma": "Virgulă",
   "comment": "cometariu",
   "complete": "Complet",
   "confirm_contact_delete": "Da, şterge contactul",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Creați Sondaj",
   "create_your_account": "Crează-ţi Contul",
+  "csv_add_recipients": "Adăugați Destinatar folosind CSV",
+  "csv_error_duplicated_recipient": "Destinatar duplicat",
+  "csv_error_invalid_amount": "Valoarea sumei nevalide",
+  "csv_error_max_limit_multiout": "Limita maximă pentru Multiout a fost depășită. Limita este:",
+  "csv_error_max_limit_same_multiout": "Limită maximă pentru aceeași sumă Multiout depășită. Limita este:",
+  "csv_error_unreadable_format": "Format nelegibil",
   "current_price": "Preț Actual",
   "current_quantity": "Cantitate Actuală",
   "current_version": "Versiune curentă",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Dacă pierdeți fraza de acces, nu veți putea efectua nicio tranzacție, adică monedele dvs. se pierd. Fraza de acces nu poate fi recuperată. Mențineți această parolă secretă. Toată lumea care cunoaște expresia de acces este de facto proprietarul contului.",
   "message": "Mesaj",
   "message_empty": "Mesajul este gol.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Acest mesaj este criptat.",
   "message_is_not_encrypted": "Acest mesaj nu este criptat.",
+  "message_is_text": "Message is Text?",
   "messages": "Mesaje",
   "min_nr_of_options": "Nr minim de opţiuni",
   "minimum_fee": "Minim",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Attention: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_write_below": "Parloa ta este foarte importantă! Pentru a fi sigur că ai salvat-o, te rugăm să o scrii din nou mai jos: ",
   "password_required_for_decryption": "Este necesară parola ta de acces pentru a decripta aceste mesaje.",
+  "paste_csv_content": "Lipiți conținutul CSV aici",
   "payload": "Capacitate utilă",
   "payload_hash": "Capacitate utilă Hash",
   "payload_length": "Capacitatea lungimii",
@@ -773,9 +783,10 @@
   "repeat": "Repetă",
   "request_burst": "Request BURST",
   "request_processing_time": "Cereți timpul de procesare",
+  "reset_recipients": "Resetați destinatarii",
   "returning_user_q": "Deja înregistrat?",
   "reward_recipient": "Recipient Recompensă",
-  "same_out": "Same Amount",
+  "same_out": "Aceeasi suma",
   "scoop_num": "Numărul de bucăți",
   "search_aliases": "Căutare alias-uri...",
   "search_assets": "Căutare Active...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Selectare schemă culori",
   "select_contact_in_sidebar": "Te rugăm să selectezi o persoană de contact în bara laterală stânga.",
   "select_node": "Alegeți Nodul",
+  "select_recipients": "Selectați Destinatari",
   "sell": "Vânzare",
   "sell_alias": "Vinde Alias",
   "sell_asset_for_burst": "Vinde __assetName__ pentru burst",
@@ -799,6 +811,7 @@
   "seller": "Vânzător",
   "seller_account_id": "ID-ul vânzătorului",
   "seller_products": "Produsele vânzătorului",
+  "semicolon": "Punct şi virgulă",
   "send": "Trimite",
   "send_a_message": "Trimite un mesaj",
   "send_burst": "Trimite burst",
@@ -901,6 +914,7 @@
   "success_valid_token": "Token-ul este valabil şi aparţine contului __account_link__. Acesta a fost generat la __timestamp__.",
   "suggested_fee": "Taxe recomandate",
   "suggested_fee_help": "Taxă redusă: tranzacția cu șanse de 50% o va face într-unul din următoarele zece blocuri. <br /> Taxa standard: tranzacția cu șanse de 50% o va face în următorul bloc. <br /> Taxa de prioritate: în următorul bloc și 99% în următoarele două blocuri.",
+  "tabulator": "tabulator",
   "tags": "Tags",
   "tags_categories": "Tag-uri (categorii)",
   "tentative": "Tentativă",
