--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -19,6 +19,7 @@
   "add_message_q": "Добавить сообщение?",
   "add_note_to_self_q": "Добавить заметку для себя? ",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Добавление нескольких получателей по CSV",
   "add_recipient_to_contacts_q": "Добавить получателя в список контактов?",
   "add_sender_as_contact": "Добавить отправителя в контакты",
   "add_to_group": "Добавить в Группу",
@@ -140,6 +141,7 @@
   "change_quantity": "Изменить количество",
   "cheap_fee": "дешево",
   "checking_for_updates": "Поиск обновлений...",
+  "choose_delimiter": "Выберите разделитель",
   "choose_own_passphrase": "Хотите выбрать свой собственный пароль? Нажмите здесь.",
   "clear_results": "Очистить результаты",
   "clear_search_results": "Очистить результаты поиска",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Нажмите здесь, чтобы скопировать пароль в буфер обмена",
   "click_to_refresh": "Нажмите, чтобы обновить",
   "close": "Закрыть",
+  "comma": "запятая",
   "comment": "Комментарий",
   "complete": "Завершено",
   "confirm_contact_delete": "Да, удалить контакт",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Создать опрос",
   "create_your_account": "Создайте свой аккаунт",
+  "csv_add_recipients": "Добавить получателя с помощью CSV",
+  "csv_error_duplicated_recipient": "Дублированный получатель",
+  "csv_error_invalid_amount": "Неверное значение суммы",
+  "csv_error_max_limit_multiout": "Превышен максимальный предел для Multiout. Предел это:",
+  "csv_error_max_limit_same_multiout": "Превышен максимальный предел для той же суммы. Предел это:",
+  "csv_error_unreadable_format": "Нечитаемый формат",
   "current_price": "Текущая цена",
   "current_quantity": "Текущее количество",
   "current_version": "Текущая версия",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Если вы потеряете парольную фразу, вы не сможете совершать никаких транзакций, то есть ваши монеты будут потеряны. Пароль не подлежит восстановлению. Держите эту секретную фразу в секрете. Каждый, кто знает парольную фразу, де-факто является владельцем учетной записи.",
   "message": "Сообщение",
   "message_empty": "Пустое сообщение.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Это сообщение зашифровано.",
   "message_is_not_encrypted": "Это сообщение не зашифровано.",
+  "message_is_text": "Message is Text?",
   "messages": "Сообщения",
   "min_nr_of_options": "Минимальное количество вариантов",
   "minimum_fee": "минимальный",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Внимание: парольная фраза-это все, что стоит между вашей учетной записи и остальной частью мира. Не используйте какие либо известные фразы и предложения, особенно тексты песен или отрывки из литература. <br /><br /> Никогда не раскрывайте свой пароль. Если вы его потеряете - вы потеряете доступ к вашей учетной записи!",
   "passphrase_write_below": "Ваша секретная фраза очень важна! Для того, чтобы быть уверенным, что вы сохранили её правильно, пожалуйста, напишите вашу секретную фразу ниже:",
   "password_required_for_decryption": "Ваш пароль требуется для расшифровки этих сообщений.",
+  "paste_csv_content": "Вставьте содержимое CSV здесь",
   "payload": "Комерческая нагрузка",
   "payload_hash": "Хэш комерческой нагрузки",
   "payload_length": "Длина коммерческой нагрузки",
@@ -773,9 +783,10 @@
   "repeat": "Повторить",
   "request_burst": "Request BURST",
   "request_processing_time": "Время обработки запроса",
+  "reset_recipients": "Сбросить получателей",
   "returning_user_q": "Зарегистрированный пользователь?",
   "reward_recipient": "Получатель вознаграждения",
-  "same_out": "Same Amount",
+  "same_out": "Такое же количество",
   "scoop_num": "Номер совка",
   "search_aliases": "Поиск Псевдонимов...",
   "search_assets": "Поиск активов...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Выберите цветовую схему",
   "select_contact_in_sidebar": "Пожалуйста, выберите контакт в левой боковой панели.",
   "select_node": "Выберите узел",
+  "select_recipients": "Выберите получателей",
   "sell": "Продать",
   "sell_alias": "Продать псевдоним",
   "sell_asset_for_burst": "Продать __assetName__ за BURST",
@@ -799,6 +811,7 @@
   "seller": "Продавец",
   "seller_account_id": "ID аккаунта продавца",
   "seller_products": "Продавец Товара",
+  "semicolon": "Точка с запятой",
   "send": "Отправить",
   "send_a_message": "Отправить сообщение",
   "send_burst": "Отправить",
@@ -901,6 +914,7 @@
   "success_valid_token": "Токен действителен и принадлежит учетной записи __account_link__. Он был создан  __timestamp__.",
   "suggested_fee": "Предлагаемые сборы",
   "suggested_fee_help": "Дешевый сбор: транзакция с вероятностью 50% сделает это в одном из следующих десяти блоков. <br /> Стандартная комиссия: транзакция с шансом 50% сделает это в следующем блоке. <br /> Приоритетный платеж: сделка с шансом 90% это в следующем блоке и 99% сделать в течение следующих двух блоков.",
+  "tabulator": "табулятор",
   "tags": "Теги",
   "tags_categories": "Теги (категории)",
   "tentative": "Предварительный",
