--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -19,6 +19,7 @@
   "add_message_q": "Dodaj poruku?",
   "add_note_to_self_q": "Dodajte poruku za sebe?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "",
   "add_recipient_to_contacts_q": "Dodaj primatelja u kontakte?",
   "add_sender_as_contact": "Dodajte Pošiljaoca u Kontakte",
   "add_to_group": "Dodaj u grupu",
@@ -140,6 +141,7 @@
   "change_quantity": "Promijenite količinu",
   "cheap_fee": "Jeftini",
   "checking_for_updates": "Provjera nove verzije je u toku...",
+  "choose_delimiter": "",
   "choose_own_passphrase": "Želite odabrati vlastitu lozinku? Kliknite ovdje.",
   "clear_results": "Obriši Rezultate",
   "clear_search_results": "Obriši rezultate pretraživanja",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Kliknite ovde da kopirate lozinku u klipbord",
   "click_to_refresh": "Kliknite da biste osvežili",
   "close": "Zatvori",
+  "comma": "",
   "comment": "Komentar",
   "complete": "Gotovo",
   "confirm_contact_delete": "Da, obriši kontakt",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Kreiraj anketu",
   "create_your_account": "Kreirajte vaš račun",
+  "csv_add_recipients": "",
+  "csv_error_duplicated_recipient": "",
+  "csv_error_invalid_amount": "",
+  "csv_error_max_limit_multiout": "",
+  "csv_error_max_limit_same_multiout": "",
+  "csv_error_unreadable_format": "",
   "current_price": "Trenutna cijena",
   "current_quantity": "Trenutna količina",
   "current_version": "Trenutna verzija",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Ako izgubite zaporku, nećete moći da obavite nijednu transakciju, tj. Vaši kovanice su izgubljene. Lozinka nije nadoknadiva. Čuvajte ovu tajnu lozinke. Svi koji znaju zapor su de facto vlasnici računa.",
   "message": "Poruka",
   "message_empty": "Poruka je prazna.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Ova poruka je zaštićena.",
   "message_is_not_encrypted": "Ova poruka nije zaštićena.",
+  "message_is_text": "Message is Text?",
   "messages": "Poruke",
   "min_nr_of_options": "Minimalni broj opcija",
   "minimum_fee": "Minimum",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Attention: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_write_below": "Vaša fraza predstavlja vašu lozinku i vrlo je važna! Kako bismo se uvjerili da ste ju spremili, molimo upišite ju ponovo u ponuđeni formular: ",
   "password_required_for_decryption": "Vaša lozinka je potrebna za dekodiranje ove poruke.",
+  "paste_csv_content": "",
   "payload": "Plaćeni teret",
   "payload_hash": "Težina hasha",
   "payload_length": "Payload Length",
@@ -773,6 +783,7 @@
   "repeat": "Ponovite",
   "request_burst": "Request BURST",
   "request_processing_time": "Zahtjev za obradu vremena",
+  "reset_recipients": "",
   "returning_user_q": "Korisnik povratnik?",
   "reward_recipient": "Reward Recipient",
   "same_out": "Same Amount",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Odaberite shemu boje",
   "select_contact_in_sidebar": "Molimo odaberite kontakt u lijevom stupcu.",
   "select_node": "Select Node",
+  "select_recipients": "",
   "sell": "Prodaj",
   "sell_alias": "Prodaj pseudonime",
   "sell_asset_for_burst": "Prodaj __assetName__ za burst",
@@ -799,6 +811,7 @@
   "seller": "Prodavač",
   "seller_account_id": "Seller's Account ID",
   "seller_products": "Proizvodi prodavača",
+  "semicolon": "",
   "send": "Pošalji",
   "send_a_message": "Pošalji poruku",
   "send_burst": "Pošalji burst",
@@ -901,6 +914,7 @@
   "success_valid_token": "Taj token je valjan i pripada računu __account_link__. Generiran je u __timestamp__.",
   "suggested_fee": "Predložene naknade",
   "suggested_fee_help": "Jeftina naknada: 50% šansa za transakciju će se ostvariti u jednom od sljedećih deset blokova. <br /> Standardna naknada: 50% vjerojatna transakcija će se ostvariti u sljedećem bloku. <br /> Prioritetna naknada: 90% šansa za transakciju u sledećem bloku i 99% u naredna dva bloka.",
+  "tabulator": "",
   "tags": "Tagovi",
   "tags_categories": "Oznake (kategorije)",
   "tentative": "Privremeni",
