--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -19,6 +19,7 @@
   "add_message_q": "Pridať správu?",
   "add_note_to_self_q": "Pridať poznámku pre seba?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Pridanie viacerých príjemcov pomocou CSV",
   "add_recipient_to_contacts_q": "Pridať príjemcu medzi kontakty?",
   "add_sender_as_contact": "Pridať odosielateľa do kontaktov",
   "add_to_group": "Pridať do skupiny",
@@ -140,6 +141,7 @@
   "change_quantity": "Zmeniť množstvo",
   "cheap_fee": "lacný",
   "checking_for_updates": "Kontrolujú sa aktualizácie...",
+  "choose_delimiter": "Vyberte oddeľovač",
   "choose_own_passphrase": "Chcete si zvoliť svoje vlastné heslo? Kliknite sem.",
   "clear_results": "Vymazať výsledky",
   "clear_search_results": "Vymazať výsledky vyhľadávania",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Kliknutím sem skopírujete prístupovú frázu do schránky",
   "click_to_refresh": "Kliknutím obnovíte",
   "close": "Zavrieť",
+  "comma": "čiarka",
   "comment": "komentár",
   "complete": "Hotovo",
   "confirm_contact_delete": "Áno, odstrániť kontakt",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Vytvoriť Hlasovanie",
   "create_your_account": "Vytvorenie účtu",
+  "csv_add_recipients": "Pridajte príjemcu pomocou CSV",
+  "csv_error_duplicated_recipient": "Duplikovaný príjemca",
+  "csv_error_invalid_amount": "Neplatná hodnota sumy",
+  "csv_error_max_limit_multiout": "Bol prekročený maximálny limit pre Multiout. Limit je:",
+  "csv_error_max_limit_same_multiout": "Bol prekročený maximálny limit pre viacnásobok rovnakej sumy. Limit je:",
+  "csv_error_unreadable_format": "Nečitateľný formát",
   "current_price": "Aktuálna cena",
   "current_quantity": "Aktuálne množstvo",
   "current_version": "Aktuálna verzia",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Ak stratíte prístupovú frázu, nebudete môcť vykonávať žiadne transakcie, t. J. Vaše mince sa stratia. Prístupová fráza sa nedá obnoviť. Udržujte toto heslo v tajnosti. Každý, kto pozná heslo, je de facto vlastníkom účtu.",
   "message": "Správa",
   "message_empty": "Správa je prázdna.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Táto správa je zašifrovaná.",
   "message_is_not_encrypted": "Táto správa nie je zašifrovaná.",
+  "message_is_text": "Message is Text?",
   "messages": "Správy",
   "min_nr_of_options": "Minimálny počet možností",
   "minimum_fee": "minimum",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Pozor: Heslo je všetko, čo stojí medzi vaším kontom a zvyškom sveta. Nepoužívajte žiadne zmysluplné vety, najmä tie ktoré sa vyskytujú v piesni alebo literatúre.<br /><br />Nikdy nezverejnite svoje heslo. Ak stratíte heslo, stratíte prístup k svojmu účtu!",
   "passphrase_write_below": "Vaše heslo je veľmi dôležité! Pre ubezpečenie, že ste si ho uložili, napíšte svoje heslo nižšie:",
   "password_required_for_decryption": "Vaše heslo je potrebné na dešifrovanie týchto správ.",
+  "paste_csv_content": "Sem vložte obsah CSV",
   "payload": "Zaťaženie",
   "payload_hash": "Hash zaťaženie",
   "payload_length": "Dĺžka zaťaženia",
@@ -773,9 +783,10 @@
   "repeat": "Opakovať",
   "request_burst": "Request BURST",
   "request_processing_time": "Čas spracovania požiadavky",
+  "reset_recipients": "Obnoviť príjemcov",
   "returning_user_q": "Opätovný používateľ?",
   "reward_recipient": "Príjemca odmeny",
-  "same_out": "Same Amount",
+  "same_out": "Rovnaké množstvo",
   "scoop_num": "Scoop Number",
   "search_aliases": "Hľadať aliasy...",
   "search_assets": "Hľadať majetok...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Vybrať farebnú škálu",
   "select_contact_in_sidebar": "V ľavom paneli vyberte kontakt.",
   "select_node": "Vyberte Uzol",
+  "select_recipients": "Vyberte Príjemcovia",
   "sell": "Predať",
   "sell_alias": "Predať Alias",
   "sell_asset_for_burst": "Predať __assetName__ za BURST",
@@ -799,6 +811,7 @@
   "seller": "Predávajúci",
   "seller_account_id": "Seller's Account ID",
   "seller_products": "Výrobky predajcu",
+  "semicolon": "bodkočiarka",
   "send": "Odoslať",
   "send_a_message": "Odoslať správu",
   "send_burst": "Odoslať BURST",
@@ -901,6 +914,7 @@
   "success_valid_token": "Token je platný a patrí k účtu __account_link__. Bol vytvorený __timestamp__.",
   "suggested_fee": "Navrhované poplatky",
   "suggested_fee_help": "Lacný poplatok: 50% šanca na transakciu bude v jednom z nasledujúcich desiatich blokov. <br /> Štandardný poplatok: 50% šanca na transakciu bude v nasledujúcom bloku. <br /> Prioritný poplatok: 90% šanca na transakciu v nasledujúcom bloku a 99% v nasledujúcich dvoch blokoch.",
+  "tabulator": "tabulator",
   "tags": "Značky",
   "tags_categories": "Značky (kategórie)",
   "tentative": "Nezáväzne",
