--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -19,6 +19,7 @@
   "add_message_q": "Add a Message?",
   "add_note_to_self_q": "Add Note to Self?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Adding multiple recipients by CSV",
   "add_recipient_to_contacts_q": "Add recipient to contacts?",
   "add_sender_as_contact": "Add Sender as Contact",
   "add_to_group": "Add to Group",
@@ -140,6 +141,7 @@
   "change_quantity": "Change Quantity",
   "cheap_fee": "Cheap",
   "checking_for_updates": "Checking for updates...",
+  "choose_delimiter": "Choose a Delimiter",
   "choose_own_passphrase": "Want to choose your own passphrase? Click here.",
   "clear_results": "Clear Results",
   "clear_search_results": "Clear Search Results",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Click here to copy the passphrase into the clipboard",
   "click_to_refresh": "Click to refresh",
   "close": "Close",
+  "comma": "Comma",
   "comment": "Comment",
   "complete": "Complete",
   "confirm_contact_delete": "Yes, Delete Contact",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Create Poll",
   "create_your_account": "Create Your Account",
+  "csv_add_recipients": "Add Recipient using CSV",
+  "csv_error_duplicated_recipient": "Duplicated Recipient",
+  "csv_error_invalid_amount": "Invalid amount value",
+  "csv_error_max_limit_multiout": "Maximum Limit for Multiout exceeded. Limit is:",
+  "csv_error_max_limit_same_multiout": "Maximum Limit for Same Amount Multiout exceeded. Limit is:",
+  "csv_error_unreadable_format": "Unreadable Format",
   "current_price": "Current Price",
   "current_quantity": "Current Quantity",
   "current_version": "Current version",
@@ -575,9 +584,9 @@
   "memorize_passphrase_help_addon": "If you lose the passphrase you won't be able to do any transactions, i.e. your coins are lost. The passphrase is not recoverable. Keep this passphrase secret. Everybody who knows the passphrase is de facto the owner of the account.",
   "message": "Message",
   "message_empty": "Message is empty.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "This message is encrypted.",
   "message_is_not_encrypted": "This message is not encrypted.",
+  "message_is_text": "Message is Text?",
   "messages": "Messages",
   "min_nr_of_options": "Minimum Nr of Options",
   "minimum_fee": "Minimum",
@@ -593,6 +602,7 @@
   "my_products_for_sale": "My Products For Sale",
   "my_store": "My Store",
   "name": "Name",
+  "network": "Network",
   "new_group_name": "New Group Name",
   "new_group_title": "New Group Title",
   "new_message": "New message",
@@ -609,7 +619,6 @@
   "next": "Next",
   "next_block": "Next Block",
   "next_page": "Next Page",
-  "network": "Network",
   "no": "No",
   "no_account_q_create_account": "Don't have an account? Click here to create one!",
   "no_aliases_yet": "No aliases yet, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>register one!</a>",
@@ -696,6 +705,7 @@
   "passphrase_warning": "Attention: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_write_below": "Your passphrase is very important! In order to be sure that you have saved it, please write your passphrase below:",
   "password_required_for_decryption": "Your passphrase is required to decrypt these messages.",
+  "paste_csv_content": "Paste the CSV content here",
   "payload": "Payload",
   "payload_hash": "Payload Hash",
   "payload_length": "Payload Length",
@@ -784,6 +794,7 @@
   "repeat": "Repeat",
   "request_burst": "Request BURST",
   "request_processing_time": "Request Processing Time",
+  "reset_recipients": "Reset Recipients",
   "returning_user_q": "Returning User?",
   "reward_recipient": "Reward Recipient",
   "same_out": "Same Amount",
@@ -801,6 +812,7 @@
   "select_color_scheme": "Select Color Scheme",
   "select_contact_in_sidebar": "Please select a contact in the left sidebar.",
   "select_node": "Select Node",
+  "select_recipients": "Select Recipients",
   "sell": "Sell",
   "sell_alias": "Sell Alias",
   "sell_asset_for_burst": "Sell __assetName__ for BURST",
@@ -812,6 +824,7 @@
   "seller": "Seller",
   "seller_account_id": "Seller's Account ID",
   "seller_products": "Seller Products",
+  "semicolon": "Semicolon",
   "send": "Send",
   "send_a_message": "Send a Message",
   "send_burst": "Send BURST",
@@ -914,6 +927,7 @@
   "success_valid_token": "The token is valid and belongs to account __account_link__. It was generated on __timestamp__.",
   "suggested_fee": "Suggested fees",
   "suggested_fee_help": "Cheap fee: 50% chance transaction will make it in one of the next ten blocks.<br />Standard fee: 50% chance transaction will make it in the next block.<br />Priority fee: 90% chance transaction will make it in the next block and 99% to make within next two blocks.",
+  "tabulator": "Tabulator",
   "tags": "Tags",
   "tags_categories": "Tags (categories)",
   "tentative": "Tentative",
