--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -19,6 +19,7 @@
   "add_message_q": "Ajouter un message ?",
   "add_note_to_self_q": "Ajouter une note personnelle ?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Ajout de plusieurs destinataires par CSV",
   "add_recipient_to_contacts_q": "Ajouter le destinataire aux contacts ?",
   "add_sender_as_contact": "Ajouter l'expéditeur comme Contact",
   "add_to_group": "Ajouter au groupe",
@@ -140,6 +141,7 @@
   "change_quantity": "Modifier la quantité",
   "cheap_fee": "Pas cher",
   "checking_for_updates": "Vérification des mises à jour...",
+  "choose_delimiter": "Choisissez un délimiteur",
   "choose_own_passphrase": "Voulez-vous choisir votre propre phrase de passe ? Cliquez ici.",
   "clear_results": "Effacer les résultats",
   "clear_search_results": "Effacer les résultats de recherche",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Cliquez ici pour copier la phrase secrète dans le presse-papiers",
   "click_to_refresh": "Cliquez pour rafraîchir",
   "close": "Fermer",
+  "comma": "Virgule",
   "comment": "Commentaire",
   "complete": "Compléter",
   "confirm_contact_delete": "Supprimer ce contact",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Créer un sondage",
   "create_your_account": "Créer un compte",
+  "csv_add_recipients": "Ajouter un destinataire à l'aide de CSV",
+  "csv_error_duplicated_recipient": "Destinataire dupliqué",
+  "csv_error_invalid_amount": "Valeur du montant invalide",
+  "csv_error_max_limit_multiout": "Limite maximale dépassée pour la sortie multiple. La limite est:",
+  "csv_error_max_limit_same_multiout": "Limite maximale dépassée pour la même quantité. La limite est:",
+  "csv_error_unreadable_format": "Format illisible",
   "current_price": "Prix actuel",
   "current_quantity": "Quantité actuelle",
   "current_version": "Version actuelle",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Si vous perdez la phrase secrète, vous ne pourrez plus effectuer aucune transaction, c’est-à-dire que vos pièces sont perdues. La phrase secrète n'est pas récupérable. Gardez cette phrase secrète secrète. Tous ceux qui connaissent la phrase secrète sont de facto propriétaires du compte.",
   "message": "Message",
   "message_empty": "Le message est vide.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Ce message est chiffré.",
   "message_is_not_encrypted": "Ce message n'est pas chiffré.",
+  "message_is_text": "Message is Text?",
   "messages": "Messages",
   "min_nr_of_options": "Nbre d'options minimum",
   "minimum_fee": "Le minimum",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Attention : la phrase secrète est la seule barrière entre votre compte et le reste du monde. N'utilisez pas de phrase sensée, en particulier provenant d'une chansons ou d'un livre.<br /><br />Ne partagez jamais votre phrase secrète. Si vous la perdez, vous perdez également l'accès à votre compte !",
   "passphrase_write_below": "Votre mot de passe est très important ! Afin d'être sûr que vous l'ayez correctement enregistré ou mémorisé, veuillez le réécrire ci-dessous :",
   "password_required_for_decryption": "Votre phrase de passe est requise pour déchiffrer ces messages.",
+  "paste_csv_content": "Collez le contenu CSV ici",
   "payload": "Charge",
   "payload_hash": "Hachage de la charge",
   "payload_length": "Longueur de la charge",
@@ -773,9 +783,10 @@
   "repeat": "Répéter",
   "request_burst": "Request BURST",
   "request_processing_time": "Temps de traitement de la demande",
+  "reset_recipients": "Réinitialiser les destinataires",
   "returning_user_q": "Déjà inscrit ?",
   "reward_recipient": "Récipiendaire de la récompense",
-  "same_out": "Same Amount",
+  "same_out": "Même quantité",
   "scoop_num": "Numéro de Scoop",
   "search_aliases": "Rechercher un alias...",
   "search_assets": "Rechercher des actifs...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Sélectionnez la couleur du thème",
   "select_contact_in_sidebar": "Merci de choisir un contact dans le volet gauche.",
   "select_node": "Choisissez un nœud",
+  "select_recipients": "Sélectionner les destinataires",
   "sell": "Vendre",
   "sell_alias": "Vendre l'alias",
   "sell_asset_for_burst": "Vendre __assetName__ pour des BURST",
@@ -799,6 +811,7 @@
   "seller": "Vendeur",
   "seller_account_id": "ID du compte du vendeur",
   "seller_products": "Produits du vendeur",
+  "semicolon": "Point-virgule",
   "send": "Envoyer",
   "send_a_message": "Envoyer le message",
   "send_burst": "Envoyer des BURST",
@@ -901,6 +914,7 @@
   "success_valid_token": "Le jeton est valide et appartient au compte __account_link__. Il a été généré le __timestamp__.",
   "suggested_fee": "Frais suggérés",
   "suggested_fee_help": "Frais bon marché: une transaction à 50% de chances de réussir dans l’un des dix blocs suivants. <br /> Frais standard: une transaction à 50% de chances de réussir dans le bloc suivant. <br /> Frais de priorité: à 90% de transaction dans le bloc suivant et 99% à faire dans les deux blocs suivants.",
+  "tabulator": "Tabulatrice",
   "tags": "Tags",
   "tags_categories": "Tags (catégories)",
   "tentative": "Provisoire",
