--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -19,6 +19,7 @@
   "add_message_q": "एक संदेश जोड़ें?",
   "add_note_to_self_q": "अपने लिए नोट जोड़ें?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "CSV द्वारा कई प्राप्तकर्ताओं को जोड़ना",
   "add_recipient_to_contacts_q": "प्राप्तकर्ता को संपर्कों में जोड़ें?",
   "add_sender_as_contact": "भेजने वाले को सम्पर्क के रूप में जोड़ें",
   "add_to_group": "समूह में जोड़ें",
@@ -140,6 +141,7 @@
   "change_quantity": "मात्रा को बदलें",
   "cheap_fee": "सस्ता",
   "checking_for_updates": "अपडेट की जाँच कर रहा है...",
+  "choose_delimiter": "एक Delimiter चुनें",
   "choose_own_passphrase": "अपने खुद का passphrase चयन करना चाहते हैं? यहाँ क्लिक करें।",
   "clear_results": "परिणामों को साफ़ करें",
   "clear_search_results": "खोज परिणामों को साफ़ करें",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "पासफ़्रेज़ को क्लिपबोर्ड में कॉपी करने के लिए यहां क्लिक करें",
   "click_to_refresh": "ताज़ा करने के लिए क्लिक करें",
   "close": "बंद करें",
+  "comma": "अल्पविराम",
   "comment": "टिप्पणी",
   "complete": "पूरा",
   "confirm_contact_delete": "हाँ, संपर्क हटाएँ",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "मतदान बनाएँ",
   "create_your_account": "अपना खाता बनाएँ",
+  "csv_add_recipients": "CSV का उपयोग करके प्राप्तकर्ता जोड़ें",
+  "csv_error_duplicated_recipient": "डुप्लिकेट प्राप्तकर्ता",
+  "csv_error_invalid_amount": "अमान्य राशि मान",
+  "csv_error_max_limit_multiout": "मल्टीआउट के लिए अधिकतम सीमा पार हो गई। सीमा है:",
+  "csv_error_max_limit_same_multiout": "उसी राशि के लिए अधिकतम सीमा मल्टीआउट पार हो गई। सीमा है:",
+  "csv_error_unreadable_format": "अपठनीय स्वरूप",
   "current_price": "वर्तमान मूल्य",
   "current_quantity": "वर्तमान मात्रा",
   "current_version": "वर्तमान संस्करण",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "यदि आप पासफ़्रेज़ को ढीला करते हैं तो आप कोई भी लेन-देन नहीं कर पाएंगे, यानी आपके सिक्के खो गए हैं। पासफ़्रेज़ पुनर्प्राप्त करने योग्य नहीं है। इस पासफ़्रेज़ को गुप्त रखें। पासफ़्रेज़ को जानने वाला हर व्यक्ति खाता का मालिक है।",
   "message": "संदेश",
   "message_empty": "संदेश खाली है।",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "This message is encrypted.",
   "message_is_not_encrypted": "यह संदेश एन्क्रिप्ट नहीं किया गया है।",
+  "message_is_text": "Message is Text?",
   "messages": "संदेश",
   "min_nr_of_options": "Minimum Nr of Options",
   "minimum_fee": "न्यूनतम",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Attention: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_write_below": "Your passphrase is very important! In order to be sure that you have saved it, please write your passphrase below:",
   "password_required_for_decryption": "Your passphrase is required to decrypt these messages.",
+  "paste_csv_content": "CSV सामग्री यहां पेस्ट करें",
   "payload": "पेलोड",
   "payload_hash": "Payload Hash",
   "payload_length": "Payload Length",
@@ -773,9 +783,10 @@
   "repeat": "दोहराएँ",
   "request_burst": "Request BURST",
   "request_processing_time": "प्रसंस्करण समय का अनुरोध करें",
+  "reset_recipients": "प्राप्तकर्ता रीसेट करें",
   "returning_user_q": "वापिस आये उपयोगकर्ता (यूजर)?",
   "reward_recipient": "इनाम देने वाला",
-  "same_out": "Same Amount",
+  "same_out": "समान राशि",
   "scoop_num": "स्कूप नंबर",
   "search_aliases": "खोजें उपनाम...",
   "search_assets": "खोज परिसंपत्तियां...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "रंग योजना का चयन करें",
   "select_contact_in_sidebar": "कृपया बाईं साइडबार में एक संपर्क का चयन करें।",
   "select_node": "नोड चुनें",
+  "select_recipients": "प्राप्तकर्ता का चयन करें",
   "sell": "बेचें",
   "sell_alias": "उपनाम बेचें",
   "sell_asset_for_burst": "burst पाने के लिए __assetName__ बेचें",
@@ -799,6 +811,7 @@
   "seller": "विक्रेता",
   "seller_account_id": "विक्रेता की खाता ID",
   "seller_products": "Seller Products",
+  "semicolon": "सेमीकोलन",
   "send": "भेजें",
   "send_a_message": "एक संदेश भेजें",
   "send_burst": "burst भेजें",
@@ -901,6 +914,7 @@
   "success_valid_token": "टोकन मान्य है और खाता __account_link__ के अंतर्गत आता है। यह __timestamp__ पर उत्पन्न किया गया था।",
   "suggested_fee": "सुझाई गई फीस",
   "suggested_fee_help": "सस्ता शुल्क: 50% मौका लेनदेन इसे अगले दस ब्लॉकों में से एक बना देगा। <br /> मानक शुल्क: 50% मौका लेनदेन इसे अगले ब्लॉक में बनाएगा। <br /> प्राथमिकता शुल्क: 90% संभावना लेनदेन करेगा अगले ब्लॉक में और 99% अगले दो ब्लॉकों के भीतर बनाने के लिए।",
+  "tabulator": "टैबुलाटर",
   "tags": "टैग",
   "tags_categories": "टैग (श्रेणियाँ)",
   "tentative": "आजमाइश",
