--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -19,6 +19,7 @@
   "add_message_q": "Een bericht toevoegen?",
   "add_note_to_self_q": "Eigen notitie toevoegen?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Meerdere ontvangers toevoegen via CSV",
   "add_recipient_to_contacts_q": "Ontvanger toevoegen aan contactpersonen?",
   "add_sender_as_contact": "Afzender toevoegen als contactpersoon",
   "add_to_group": "Toevoegen aan groep",
@@ -140,6 +141,7 @@
   "change_quantity": "Aantal wijzigen",
   "cheap_fee": "Goedkoop",
   "checking_for_updates": "Zoeken naar updates...",
+  "choose_delimiter": "Kies een scheidingsteken",
   "choose_own_passphrase": "Wilt u uw eigen wachtwoord aanmaken? Klik dan hier.",
   "clear_results": "Resultaten wissen",
   "clear_search_results": "Zoekresultaten wissen",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Klik hier om de wachtwoordzin naar het klembord te kopiëren",
   "click_to_refresh": "Klik om te vernieuwen",
   "close": "Sluiten",
+  "comma": "Komma",
   "comment": "Commentaar",
   "complete": "Compleet",
   "confirm_contact_delete": "Ja, verwijder Contact",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Peiling aanmaken",
   "create_your_account": "Maak uw account aan",
+  "csv_add_recipients": "Ontvanger toevoegen met CSV",
+  "csv_error_duplicated_recipient": "Dubbele ontvanger",
+  "csv_error_invalid_amount": "Ongeldige bedragwaarde",
+  "csv_error_max_limit_multiout": "Maximale limiet voor Multiout overschreden. Limiet is:",
+  "csv_error_max_limit_same_multiout": "Maximumlimiet voor hetzelfde bedrag Multiout overschreden. Limiet is:",
+  "csv_error_unreadable_format": "Onleesbaar formaat",
   "current_price": "Huidige Prijs",
   "current_quantity": "Huidige Hoeveelheid",
   "current_version": "Huidige versie",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Als u de wachtwoordzin verliest, kunt u geen transacties uitvoeren, dat wil zeggen dat uw munten verloren zijn. De wachtwoordzin kan niet worden hersteld. Houd deze wachtwoordzin geheim. Iedereen die de wachtwoordzin kent, is de eigenaar van het account.",
   "message": "Bericht",
   "message_empty": "Het bericht is leeg.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Dit bericht is versleuteld.",
   "message_is_not_encrypted": "Dit bericht is niet versleuteld.",
+  "message_is_text": "Message is Text?",
   "messages": "Berichten",
   "min_nr_of_options": "Minimum aantal opties",
   "minimum_fee": "Minimum",
@@ -685,6 +694,7 @@
   "passphrase_warning": "ATTENTIE: de wachtwoordzin is alles wat tussen uw account en de rest van de wereld . Gebruik geen elke betekenisvolle zin, met name geen die wordt weergegeven in bijv. een lied of in literatuur. < br / > < br / > U moet nooit uw wachtwoordzin onthullen. Als u het verliest, verliest u toegang tot uw account!",
   "passphrase_write_below": "Uw wachtwoord is erg belangrijk! Om zeker te zijn dat u deze hebt opgeslagen, typ uw wachtwoord hieronder in:",
   "password_required_for_decryption": "Uw wachtwoord is vereist om dit bericht te decoderen.",
+  "paste_csv_content": "Plak hier de CSV-inhoud",
   "payload": "Belading",
   "payload_hash": "Hash belading",
   "payload_length": "Lengte van de lading",
@@ -773,9 +783,10 @@
   "repeat": "Herhaal",
   "request_burst": "Request BURST",
   "request_processing_time": "Verzoek om verwerkingstijd",
+  "reset_recipients": "Ontvangers opnieuw instellen",
   "returning_user_q": "Terugkerende Gebruiker?",
   "reward_recipient": "Beloning Ontvanger",
-  "same_out": "Same Amount",
+  "same_out": "Zelfde hoeveelheid",
   "scoop_num": "Scoop nummer",
   "search_aliases": "Zoek Aliassen...",
   "search_assets": "Zoek Asset...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Selecteer kleurenschema",
   "select_contact_in_sidebar": "Selecteer A.u.b. een contactpersoon in de linker menubar.",
   "select_node": "Kies knooppunt",
+  "select_recipients": "Selecteer ontvangers",
   "sell": "Verkoop",
   "sell_alias": "Verkoop Alias",
   "sell_asset_for_burst": "Verkoop __assetName__ voor BURST",
@@ -799,6 +811,7 @@
   "seller": "Verkoper",
   "seller_account_id": "Verkopers Account ID",
   "seller_products": "Verkoper producten",
+  "semicolon": "Puntkomma",
   "send": "Verstuur",
   "send_a_message": "Stuur een bericht",
   "send_burst": "BURST verzenden",
@@ -901,6 +914,7 @@
   "success_valid_token": "Het token is geldig en behoort tot de account __account_link__. Het werd geproduceerd op __timestamp__.",
   "suggested_fee": "Voorgestelde kosten",
   "suggested_fee_help": "Goedkoop tarief: 50% kanstransactie maakt het in een van de volgende tien blokken. <br /> Standaardtarief: 50% kanstransactie maakt het in het volgende blok. <br /> Prioriteitsprijs: 90% kanstransactie maakt het in het volgende blok en 99% om binnen de volgende twee blokken te maken.",
+  "tabulator": "tabulator",
   "tags": "Tags",
   "tags_categories": "Tags (categorieën)",
   "tentative": "Voorlopig",
