--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -19,6 +19,7 @@
   "add_message_q": "Adicionar uma Mensagem?",
   "add_note_to_self_q": "Adicionar uma anotação pessoal?",
   "add_recipient": "Adicionar beneficiário",
+  "add_recipient_batch": "Adicionando vários beneficiários por CSV",
   "add_recipient_to_contacts_q": "Adicionar o destinatário para contatos?",
   "add_sender_as_contact": "Adicionar o Remetente como Contato",
   "add_to_group": "Adicionar ao Grupo",
@@ -27,7 +28,7 @@
   "advanced_transaction_operations": "Operações Avançadas de Transação",
   "advanced_uppercase": "Avançado",
   "alias": "Apelido",
-  "alias_account_help": "O apelido fará referência ao número de conta digitado e pode ser usado para enviar burst, mensagens, etc..",
+  "alias_account_help": "O apelido fará referência ao número de conta digitado e pode ser usado para enviar Burst, mensagens, etc..",
   "alias_account_link": "O apelido aponta para a conta __account_id__",
   "alias_account_no_link": "O apelido não aponta para uma conta. ",
   "alias_assignment": "Atribuição de apelido",
@@ -37,8 +38,8 @@
   "alias_name": "Apelido",
   "alias_sale": "Venda de apelido",
   "alias_sale_cancellation": "Cancelamento da venda de apelido",
-  "alias_sale_direct_offer": "Este apelido foi oferecido a você por __burst__ burst.",
-  "alias_sale_indirect_offer": "Este apelido é oferecido para venda por __burst__ burst.",
+  "alias_sale_direct_offer": "Este apelido foi oferecido a você por __burst__ Burst.",
+  "alias_sale_indirect_offer": "Este apelido é oferecido para venda por __burst__ Burst.",
   "alias_sale_info_outdated": "A informação de venda do apelido está desatualizada.",
   "alias_transfer": "Transferência de apelido",
   "alias_uri": "URI do apelido",
@@ -72,7 +73,7 @@
   "asset_exchange_duplicates_warning_plural": "Aviso: há __count__ outros ativos com o mesmo nome na bolsa de ativos. Por favor, verifique se você escolheu o ativo certo. Consulte o ID da conta e do ativo para confirmar.",
   "asset_exchange_tutorial": "Tutorial da Bolsa de Ativos",
   "asset_issuance": "Emissão de Ativo",
-  "asset_minimum_fee_help": "A taxa mínima para emitir um ativo é 1,000 burst.",
+  "asset_minimum_fee_help": "A taxa mínima para emitir um ativo é 1,000 Burst.",
   "asset_name": "Nome do Ativo",
   "asset_name_help": "O nome do ativo já existe. Deve ter entre 3 e 10 caracteres de comprimento.",
   "asset_or_account_id": "ID do Ativo ou Conta",
@@ -112,17 +113,17 @@
   "brs_update": "BRS Update",
   "brs_update_available": "A new BRS release is available. It is recommended that you update.",
   "brs_version": "BRS Version",
-  "burst_account_id": "ID da conta burst",
+  "burst_account_id": "ID da conta Burst",
   "burst_explorer": "Burst Explorer",
-  "burst_forum": "Fórum burst",
+  "burst_forum": "Fórum Burst",
   "burst_token_generation_validation": "burst Token geração / validação",
   "burst_wiki": "burst Wiki",
   "buy": "Comprar",
   "buy_alias": "Comprar Pseudônimo",
-  "buy_asset_with_burst": "Comprar __assetName__ com burst",
+  "buy_asset_with_burst": "Comprar __assetName__ com Burst",
   "buy_it_q": "Comprar?",
-  "buy_order_description": "Comprar __quantity__ __asset_name__ ativos por __burst__ burst cada.",
-  "buy_order_description_help": "Por cada ativo comprado você vai pagar __burst__ burst, perfazendo um total de __total_burst__ burst quando tudo tiver sido comprado.",
+  "buy_order_description": "Comprar __quantity__ __asset_name__ ativos por __burst__ Burst cada.",
+  "buy_order_description_help": "Por cada ativo comprado você vai pagar __burst__ Burst, perfazendo um total de __total_burst__ Burst quando tudo tiver sido comprado.",
   "buy_orders": "Ordens de Compra",
   "buyer": "Comprador",
   "calculate_full_hash": "Calcular o Hash Completo",
@@ -140,6 +141,7 @@
   "change_quantity": "Alterar Quantidade",
   "cheap_fee": "Baixa",
   "checking_for_updates": "Verificando por atualizações...",
+  "choose_delimiter": "Escolha um delimitador",
   "choose_own_passphrase": "Quer escolher sua própria senha? Clique aqui.",
   "clear_results": "Limpar Resultados",
   "clear_search_results": "Limpar os Resultados da Pesquisa",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Clique aqui para copiar a frase secreta na área de transferência",
   "click_to_refresh": "Clique para atualizar",
   "close": "Fechar",
+  "comma": "Vírgula",
   "comment": "Comente",
   "complete": "Completo",
   "confirm_contact_delete": "Sim, Eliminar Contato",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Criar Enquete",
   "create_your_account": "Crie a Sua Conta",
+  "csv_add_recipients": "Adicionar destinatário usando CSV",
+  "csv_error_duplicated_recipient": "Destinatário duplicado",
+  "csv_error_invalid_amount": "Valor de valor inválido",
+  "csv_error_max_limit_multiout": "Limite máximo para Multiout excedido. O limite é:",
+  "csv_error_max_limit_same_multiout": "Limite máximo para a saída múltipla do mesmo valor excedido. O limite é:",
+  "csv_error_unreadable_format": "Formato ilegível",
   "current_price": "Preço Atual",
   "current_quantity": "Quantidade Atual",
   "current_version": "Versão Atual",
@@ -358,9 +367,9 @@
   "error_invalid_seller": "ID do Vendedor Inválido",
   "error_invalid_token": "O token NÃO É VÁLIDO. Aparenta pertencer à conta __account_link__. Foi gerado em __timestamp__.",
   "error_issue_asset": "Ocorreu um erro desconhecido! O ativo pode ter sido criado ou não.",
-  "error_max_amount_warning": "O seu montante é maior do que __burst__ burst. Tem certeza que deseja continuar? Clique novamente no botão \"enviar\" para confirmar.",
+  "error_max_amount_warning": "O seu montante é maior do que __burst__ Burst. Tem certeza que deseja continuar? Clique novamente no botão \"enviar\" para confirmar.",
   "error_max_asset_transfer_warning": "A quantidade especificada é maior do que __qty__. Tem certeza que deseja continuar? Clique novamente no botão \"enviar\" para confirmar.",
-  "error_max_fee_warning": "A sua taxa é superior a __burst__ burst. Tem certeza que deseja continuar? Clique novamente no botão \"enviar\" para confirmar.",
+  "error_max_fee_warning": "A sua taxa é superior a __burst__ Burst. Tem certeza que deseja continuar? Clique novamente no botão \"enviar\" para confirmar.",
   "error_max_tags": "É permitido no máximo __nr__ tags.",
   "error_max_value": "__field__: Valor máximo é __max__.",
   "error_merchant_message_alphanumeric": "A mensagem deve ser alfanumérica.",
@@ -425,7 +434,7 @@
   "error_sell_alias": "Ocorreu um erro desconhecido! A oferta de venda do pseudônimo pode ter sido criada ou não.",
   "error_send_encrypted_note": "Ocorreu um erro desconhecido! A mensagem pode ter sido enviada ou não.",
   "error_send_message": "Ocorreu um erro desconhecido! A mensagem pode ter sido enviada ou não.",
-  "error_send_money": "Ocorreu um erro desconhecido! Os burst podem ter sido enviados ou não.",
+  "error_send_money": "Ocorreu um erro desconhecido! Os Burst podem ter sido enviados ou não.",
   "error_server_connect": "Não foi possível conectar ao servidor.",
   "error_set_alias": "Ocorreu um erro desconhecido! Pseudônimo pode ter sido transferido ou não.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recipient has not been set.",
@@ -456,7 +465,7 @@
   "feedback_note_nonce": "Nonce da nota do feedback",
   "find_asset_id_help": "Encontre o ID na página do anúncio ou no site do emitente.",
   "finish": "Terminar",
-  "for_burst": "Para o burst",
+  "for_burst": "Para o Burst",
   "for_sale_direct": "À venda (direta)",
   "for_sale_indirect": "Para venda (indireta)",
   "forged_balance": "Saldo forjado",
@@ -509,7 +518,7 @@
   "incorrectly_typed_passphrase": "Você não digitou a senha corretamente, por favor tente novamente!",
   "info": "Informações",
   "info_merchant_message_required": "A conta do destinatário exige que você forneça uma mensagem especialmente formatada.",
-  "info_referenced_transaction_hash": "Devido ao uso do hash de uma transação referenciada, 100 burst é mantido sob custódia até que a transação seja confirmada ou expire.",
+  "info_referenced_transaction_hash": "Devido ao uso do hash de uma transação referenciada, 100 Burst é mantido sob custódia até que a transação seja confirmada ou expire.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Tutorial de interface",
   "is_scanning": "Escaneando",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Se você perder a frase secreta, não poderá fazer nenhuma transação, ou seja, suas moedas serão perdidas. A frase secreta não é recuperável. Mantenha esta senha secreta. Todo mundo que conhece a senha é de fato o dono da conta.",
   "message": "Mensagem",
   "message_empty": "A mensagem está vazia.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Esta mensagem é criptografada.",
   "message_is_not_encrypted": "Esta mensagem não é criptografada.",
+  "message_is_text": "Message is Text?",
   "messages": "Mensagens",
   "min_nr_of_options": "Número mínimo de opções",
   "minimum_fee": "Mínima",
@@ -584,6 +593,7 @@
   "my_products_for_sale": "Meus produtos à venda",
   "my_store": "Minha loja",
   "name": "Nome",
+  "network": "Rede",
   "new_group_name": "Novo nome do grupo",
   "new_group_title": "Novo título de grupo",
   "new_message": "Nova mensagem",
@@ -600,7 +610,6 @@
   "next": "Próximo",
   "next_block": "Bloco seguinte",
   "next_page": "Página seguinte",
-  "network": "Rede",
   "no": "Não",
   "no_account_q_create_account": "Não tem conta? Clique aqui para criar uma!",
   "no_aliases_yet": "Ainda não há pseudónimos",
@@ -687,6 +696,7 @@
   "passphrase_warning": "Attention: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_write_below": "Sua senha é muito importante! Para ter certeza de que você a salvou, por favor, escreva sua senha abaixo: ",
   "password_required_for_decryption": "Sua senha é necessária para descriptografar esta mensagem.",
+  "paste_csv_content": "Cole o conteúdo CSV aqui",
   "payload": "Carga útil",
   "payload_hash": "Hash de carga",
   "payload_length": "Comprimento da Carga",
@@ -719,7 +729,7 @@
   "products_by_seller": "Produtos por vendedor",
   "public_feedback": "Feedback público",
   "public_key": "Chave pública",
-  "public_key_actions": "(Definir informações de conta, enviar uma mensagem, comprar um pseudônimo, enviar burst, ...)",
+  "public_key_actions": "(Definir informações de conta, enviar uma mensagem, comprar um pseudônimo, enviar Burst, ...)",
   "public_message": "Mensagem pública",
   "purchase": "Compra",
   "purchase_delivered": "Esta compra foi entregue.",
@@ -741,12 +751,12 @@
   "recipient_address": "Endereço do destinatário",
   "recipient_alias_suggestion": "Se você quiser digitar um pseudônimo, prefixe-o com o caractere @.",
   "recipient_id": "ID de destinatário",
-  "recipient_info": "A conta do destinatário tem uma chave pública e um saldo de __burst__ burst.",
+  "recipient_info": "A conta do destinatário tem uma chave pública e um saldo de __burst__ Burst.",
   "recipient_malformed": "A conta do destinatário é malformada, favor ajustar.",
   "recipient_malformed_suggestion": "O endereço destinatário está errado, você quis dizer __recipient__ ?",
   "recipient_malformed_suggestion_plural": "O endereço destinatário está errado, você quis dizer algum dos seguintes: ",
-  "recipient_no_public_key": "A conta do destinatário não tem uma chave pública, ou seja, nunca houve uma transação de saída desta conta. A conta tem o saldo de __burst__ burst. Por favor verifique o endereço do seu destinatário antes de enviar.",
-  "recipient_no_public_key_pka": "A conta do destinatário não tem uma chave pública, ou seja, nunca houve uma transação de saída. A conta tem o saldo de __burst__ burst. Você pode aumentar a segurança, fornecendo a chave pública do destinatário.",
+  "recipient_no_public_key": "A conta do destinatário não tem uma chave pública, ou seja, nunca houve uma transação de saída desta conta. A conta tem o saldo de __burst__ Burst. Por favor verifique o endereço do seu destinatário antes de enviar.",
+  "recipient_no_public_key_pka": "A conta do destinatário não tem uma chave pública, ou seja, nunca houve uma transação de saída. A conta tem o saldo de __burst__ Burst. Você pode aumentar a segurança, fornecendo a chave pública do destinatário.",
   "recipient_problem": "Há um problema com a conta do destinatário: ",
   "recipient_public_key_account": "A chave pública corresponde à conta __account_id__.",
   "recipient_public_key_already_announced": "A chave pública desta conta já foi declarada. Use o ID de conta no lugar dela.",
@@ -775,9 +785,10 @@
   "repeat": "Repetir",
   "request_burst": "Receber BURST",
   "request_processing_time": "Solicitar Tempo de Processamento",
+  "reset_recipients": "Redefinir beneficiários",
   "returning_user_q": "Já é usuário?",
   "reward_recipient": "Destinatário da recompensa",
-  "same_out": "Same Amount",
+  "same_out": "Mesma quantidade",
   "scoop_num": "Número de colher",
   "search": "Buscar",
   "search_aliases": "Pesquisar Pseudônimos...",
@@ -792,21 +803,23 @@
   "select_color_scheme": "Selecione o esquema de cores",
   "select_contact_in_sidebar": "Por favor, selecione um contato na barra lateral esquerda.",
   "select_node": "Escolha o nó",
+  "select_recipients": "Selecionar beneficiários",
   "sell": "Vender",
   "sell_alias": "Vender Pseudônimo",
-  "sell_asset_for_burst": "Vender __assetName__ por burst",
-  "sell_order_description": "Vender __quantity__ ativos __asset_name__ por __burst__ burst cada.",
-  "sell_order_description_help": "Por ativo vendido, você receberá __burst__ burst, perfazendo um total de __total_burst__ burst, uma vez que tudo for vendido.",
+  "sell_asset_for_burst": "Vender __assetName__ por Burst",
+  "sell_order_description": "Vender __quantity__ ativos __asset_name__ por __burst__ Burst cada.",
+  "sell_order_description_help": "Por ativo vendido, você receberá __burst__ Burst, perfazendo um total de __total_burst__ Burst, uma vez que tudo for vendido.",
   "sell_orders": "Ordens de venda",
   "sell_to_anyone": "Vender para qualquer um",
   "sell_to_specific_account": "Vender para a conta específica",
   "seller": "Vendedor",
   "seller_account_id": "ID da conta do vendedor",
   "seller_products": "Produtos do vendedor",
+  "semicolon": "Ponto e vírgula",
   "send": "Enviar",
   "send_a_message": "Enviar uma mensagem",
-  "send_burst": "Enviar burst",
-  "send_burst_to_sender": "Enviar burst ao remetente",
+  "send_burst": "Enviar Burst",
+  "send_burst_to_sender": "Enviar Burst ao remetente",
   "send_message": "Enviar mensagem",
   "send_message_button": "Enviar Mensagem",
   "send_message_to_sender": "Enviar mensagem para o remetente",
@@ -839,8 +852,8 @@
   "status_account_id": "O seu ID da conta é: __account_id__",
   "status_blockchain_downloading": "A corrente de blocos está sendo baixada. Por favor aguarde até estar actualizada.",
   "status_blockchain_rescanning": "A corrente de blocos está sendo examinada novamente. Por favor aguarde até isso ter completado.",
-  "status_new_account": "Bem-vindo à sua nova conta de burst. Seu ID de conta é __account_id__ - quando enviar burst para a sua conta pela primeira vez, você pode aumentar a segurança fornecendo também a sua chave pública, que é __public_key__",
-  "status_new_account_old": "Bem-vindo à sua nova conta do burst. Seu ID da conta é __account_id__. Você tem que enviar lá algumas moedas.",
+  "status_new_account": "Bem-vindo à sua nova conta de Burst. Seu ID de conta é __account_id__ - quando enviar Burst para a sua conta pela primeira vez, você pode aumentar a segurança fornecendo também a sua chave pública, que é __public_key__",
+  "status_new_account_old": "Bem-vindo à sua nova conta do Burst. Seu ID da conta é __account_id__. Você tem que enviar lá algumas moedas.",
   "stop_forging": "Parar o forjamento",
   "stop_forging_confirmation": "Se tiver certeza de que deseja parar o forjamento, clique no botão abaixo para confirmar.",
   "stop_forging_confirmation_passphrase": "Se tiver certeza de que deseja parar o forjamento, digite sua senha para confirmar.",
@@ -905,6 +918,7 @@
   "success_valid_token": "O token é válido e pertence a conta __account_link__. Foi gerado em __timestamp__.",
   "suggested_fee": "Taxas sugeridas",
   "suggested_fee_help": "Taxa barata: 50% de chance de transação em um dos próximos dez blocos. <br /> Taxa padrão: 50% de chance de transação no próximo bloco. <br /> Taxa de prioridade: 90% de chance de transação no próximo bloco e 99% para fazer dentro dos próximos dois blocos.",
+  "tabulator": "Tabulador",
   "tags": "Etiquetas",
   "tags_categories": "Etiquetas (categorias)",
   "tentative": "Tentativa",
@@ -953,7 +967,7 @@
   "update_available": "Nova atualização disponível",
   "update_beta_available": "Uma nova versão experimental está disponível. Não é recomendável que você a instale a não ser que você saiba o que está fazendo.",
   "update_blockchain_downloading": "A corrente de blocos ainda está sendo baixada, verifique novamente após estar atualizada.",
-  "update_burst_account": "Update your burst account",
+  "update_burst_account": "Update your Burst account",
   "update_check": "Verificar atualização",
   "update_contact": "Atualizar o contato",
   "update_multiple_available": "Tanto a versão geral como a experimental estão disponíveis. Não é recomendável que você instale a versão experimental, a menos que você saiba o que está fazendo.",
@@ -972,7 +986,7 @@
   "validate": "Validar",
   "validate_token": "Validar o Token",
   "validating_node": "Validando ...",
-  "value_in_burst": "Valor em burst",
+  "value_in_burst": "Valor em Burst",
   "verified_source": "Fonte verificada e segura",
   "verify": "Verificar",
   "version": "Versão",
@@ -987,8 +1001,8 @@
   "warning": "Aviso",
   "website": "Sítio da Web",
   "website_or_text": "Site ou texto",
-  "welcome_to_burst": "Bem vindo a burst!",
-  "with_burst": "Com burst",
+  "welcome_to_burst": "Bem vindo a Burst!",
+  "with_burst": "Com Burst",
   "wrong_pin": "PIN errado",
   "x_confirmations": "__x__ confirmações",
   "yes": "Sim",
