--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -19,6 +19,7 @@
   "add_message_q": "Adicionar uma Mensagem?",
   "add_note_to_self_q": "Adicionar uma Nota Pessoal?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Adicionando vários destinatários por CSV",
   "add_recipient_to_contacts_q": "Adicionar o destinatário para contatos?",
   "add_sender_as_contact": "Adicionar remetente como contato",
   "add_to_group": "Adicionar a Grupo",
@@ -140,6 +141,7 @@
   "change_quantity": "Mudar Quantidade",
   "cheap_fee": "Barato",
   "checking_for_updates": "Procurando atualizações...",
+  "choose_delimiter": "Escolha um delimitador",
   "choose_own_passphrase": "Quer escolher a sua própria senha? Clique aqui.",
   "clear_results": "Limpar Resultados",
   "clear_search_results": "Limpar Resultado de Pesquisa",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Clique aqui para copiar a frase secreta na área de transferência",
   "click_to_refresh": "Clique para atualizar",
   "close": "Fechar",
+  "comma": "Vírgula",
   "comment": "Comente",
   "complete": "Completo",
   "confirm_contact_delete": "Sim, Apagar Contato",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Criar Enquete",
   "create_your_account": "Crie a sua conta",
+  "csv_add_recipients": "Adicionar destinatário usando CSV",
+  "csv_error_duplicated_recipient": "Destinatário duplicado",
+  "csv_error_invalid_amount": "Valor de valor inválido",
+  "csv_error_max_limit_multiout": "Limite máximo para Multiout excedido. O limite é:",
+  "csv_error_max_limit_same_multiout": "Limite máximo para a saída múltipla do mesmo valor excedido. O limite é:",
+  "csv_error_unreadable_format": "Formato ilegível",
   "current_price": "Preço Atual",
   "current_quantity": "Quantidade Atual",
   "current_version": "Versão Atual",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Se você perder a frase secreta, não poderá fazer nenhuma transação, ou seja, suas moedas serão perdidas. A frase secreta não é recuperável. Mantenha esta senha secreta. Todo mundo que conhece a senha é de fato o dono da conta.",
   "message": "Mensagem",
   "message_empty": "A mensagem está vazia.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Esta mensagem está cifrada.",
   "message_is_not_encrypted": "Esta mensagem não está cifrada.",
+  "message_is_text": "Message is Text?",
   "messages": "Mensagens",
   "min_nr_of_options": "Nº Mínimo de Escolhas",
   "minimum_fee": "Mínimo",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Atenção: A senha é tudo que tem entre a sua conta e o resto do mundo. Não utilize qualquer frase com significado, especialmente qualquer uma que aparece na música ou literatura. <br /><br /> Jamais divulgue a sua senha. Se você a perde, você perderá o acesso à sua conta!",
   "passphrase_write_below": "A sua senha é muito importante! Para ter certeza de que você a guardou, por favor, digite novamente a sua senha abaixo:",
   "password_required_for_decryption": "Necessita-se a sua senha para decifrar estas mensagens.",
+  "paste_csv_content": "Cole o conteúdo CSV aqui",
   "payload": "Carga",
   "payload_hash": "Hash de Carga",
   "payload_length": "Longitude da Carga",
@@ -773,9 +783,10 @@
   "repeat": "Repetir",
   "request_burst": "Request BURST",
   "request_processing_time": "Solicitar Tempo de Processamento",
+  "reset_recipients": "Redefinir destinatários",
   "returning_user_q": "Usuário Existente?",
   "reward_recipient": "Destinatário da recompensa",
-  "same_out": "Same Amount",
+  "same_out": "Mesma quantidade",
   "scoop_num": "Número de colher",
   "search_aliases": "Pesquisa de Aliases...",
   "search_assets": "Pesquisa de Ativos...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Selecione o Esquema de Cor",
   "select_contact_in_sidebar": "Por favor, selecione um contato na barra lateral esquerda.",
   "select_node": "Escolha o nó",
+  "select_recipients": "Selecionar beneficiários",
   "sell": "Vender",
   "sell_alias": "Vender Alias",
   "sell_asset_for_burst": "Vender __assetName__ por BURST",
@@ -799,6 +811,7 @@
   "seller": "Vendedor",
   "seller_account_id": "Seller's Account ID",
   "seller_products": "Produtos do Vendedor",
+  "semicolon": "Ponto e vírgula",
   "send": "Enviar",
   "send_a_message": "Enviar uma Mensagem",
   "send_burst": "Enviar BURST",
@@ -901,6 +914,7 @@
   "success_valid_token": "O identificador é válido e pertence à conta __account_link__. Foi gerado em __timestamp__.",
   "suggested_fee": "Taxas sugeridas",
   "suggested_fee_help": "Taxa barata: 50% de chance de transação em um dos próximos dez blocos. <br /> Taxa padrão: 50% de chance de transação no próximo bloco. <br /> Taxa de prioridade: 90% de chance de transação no próximo bloco e 99% para fazer dentro dos próximos dois blocos.",
+  "tabulator": "Tabulador",
   "tags": "Etiquetas",
   "tags_categories": "Etiquetas (categorias)",
   "tentative": "Tentativa",
