--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -19,6 +19,7 @@
   "add_message_q": "Dodajte Poruku?",
   "add_note_to_self_q": "Dodajte poruku za sebe?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Додавање више прималаца од стране ЦСВ-а",
   "add_recipient_to_contacts_q": "Dodati primaoca u kontakte?",
   "add_sender_as_contact": "Dodajte Pošiljaoca u Kontakte",
   "add_to_group": "Dodajte u Grupu",
@@ -131,12 +132,14 @@
   "change_qty": "Promeni QTY",
   "change_quantity": "Promenite Iznos",
   "checking_for_updates": "Provera nove verzije je u toku...",
+  "choose_delimiter": "Изаберите Делимитер",
   "choose_own_passphrase": "Želite da izaberete svoju lozinku? Kliknite ovde.",
   "clear_results": "Obriši Rezultate",
   "clear_search_results": "Obrišite Rezultate Pretrage",
   "click_here_to_enable": "Kliknite ovde da ga omogućite.",
   "click_to_claim": "Click here to claim your free Burst.",
   "close": "Zatvori",
+  "comma": "Зарез",
   "comment": "Komentariši",
   "complete": "Završeno",
   "confirm_contact_delete": "Da, obrišite kontakt",
@@ -168,6 +171,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Nova Anketa",
   "create_your_account": "Kreirajte Vaš Nalog",
+  "csv_add_recipients": "Додајте примаоца помоћу ЦСВ-а",
+  "csv_error_duplicated_recipient": "Дуплирани прималац",
+  "csv_error_invalid_amount": "Неважећа вредност износа",
+  "csv_error_max_limit_multiout": "Максимални лимит за Мултиоут је премашен. Лимит је:",
+  "csv_error_max_limit_same_multiout": "Максимални лимит за исти износ преноса је прекорачен. Лимит је:",
+  "csv_error_unreadable_format": "Нечитљив формат",
   "current_price": "Trenutna Cena",
   "current_quantity": "Trenutna Količina",
   "current_version": "Тренутна верзија",
@@ -531,9 +540,9 @@
   "memorize_passphrase_help": "Molimo Vas zapištite ili zapamtite ovih 12 reči (redosled reči i veličina slova je veoma važna - uvek koristite mala slova).  Ponuđena lozinka je neophodna za pristup Vašem BURST računu.",
   "message": "Poruka",
   "message_empty": "Poruka je prazna.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Ova poruka je zaštićena.",
   "message_is_not_encrypted": "Ova poruka nije zaštićena.",
+  "message_is_text": "Message is Text?",
   "messages": "Poruke",
   "min_nr_of_options": "Minimalan Broj Opcija",
   "minimum_nr_choices": "Minimalan Broj Izbora",
@@ -644,6 +653,7 @@
   "passphrase_warning": "Upozorenje</strong>: Lozinka je jedino što deli vaš nalog od ostatka sveta. Ne koristite poznate rečenice, posebno izbegavate one iz popularnih pesama i sveta proze.<br /><br />Nikada ne pokazujte vašu lozinku. Ako je izgubite, izgubili ste pristup vašem nalogu i svemu što se na njemu nalazi!",
   "passphrase_write_below": "Vaša fraza predstavlja vašu lozinku i vrlo je važna! Kako bismo se uverili da ste je zapamtili, molimo upišite je ponovo u ponuđeni formular:",
   "password_required_for_decryption": "Vaša lozinka je potrebna za dekodiranje ove poruke.",
+  "paste_csv_content": "Овде залепите ЦСВ садржај",
   "payload": "Plaćeni Teret",
   "payload_hash": "Težina Hash-a",
   "payload_length": "Payload Length",
@@ -721,8 +731,9 @@
   "remove_from_group": "Izbrišite iz Grupe",
   "repeat": "Ponovite",
   "request_burst": "Request BURST",
+  "reset_recipients": "Ресетујте примаоце",
   "returning_user_q": "Korisnik Povratnik?",
-  "same_out": "Same Amount",
+  "same_out": "Исти износ",
   "search_aliases": "Tražite Alias-e...",
   "search_assets": "Pretraži Asset-e...",
   "search_by_id": "Tražite po ID-u...",
@@ -733,6 +744,7 @@
   "select_color_scheme": "Izaberite Shemu Boje",
   "select_contact_in_sidebar": "Molimo Vas izaberite kontakt u levom padajućem meniju.",
   "select_node": "Изаберите Ноде",
+  "select_recipients": "Изаберите примаоци",
   "sell": "Prodaj",
   "sell_alias": "Prodajte Alias",
   "sell_asset_for_burst": "Prodajte __assetName__ za BURST",
@@ -744,6 +756,7 @@
   "seller": "Prodavac",
   "seller_account_id": "Seller's Account ID",
   "seller_products": "Proizvodi Prodavca",
+  "semicolon": "Тацка зарез",
   "send": "Pošaljite",
   "send_a_message": "Pošalji Poruku",
   "send_burst": "Pošaljite BURST",
@@ -835,6 +848,7 @@
   "success_transfer_asset": "Transfer asset-a napreduje!",
   "success_update_contact": "Kontakt je uspešno ažuriran!",
   "success_valid_token": "Token je validan i pripada nalogu __account_link__. Generisan je u __timestamp__.",
+  "tabulator": "Табулатор",
   "tags": "Oznake",
   "tags_categories": "Oznake (kategorije)",
   "tentative": "Privremeni",
