--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -19,6 +19,7 @@
   "add_message_q": "Додајте Поруку?",
   "add_note_to_self_q": "Додајте поруку за себе?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "Додавање више прималаца од стране ЦСВ-а",
   "add_recipient_to_contacts_q": "Додати примаоца у контакте?",
   "add_sender_as_contact": "Додајте Пошиљаоца у Контакте",
   "add_to_group": "Додајте у Групу",
@@ -140,6 +141,7 @@
   "change_quantity": "Промените Износ",
   "cheap_fee": "Јефтини",
   "checking_for_updates": "Провера нове верзије је у току...",
+  "choose_delimiter": "Изаберите Делимитер",
   "choose_own_passphrase": "Желите одабрати властиту лозинку? Кликните овде.",
   "clear_results": "Обриши Резултате",
   "clear_search_results": "Обришите Резултате Претраге",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Кликните овде да бисте копирали фразу у клипборд",
   "click_to_refresh": "Кликните да бисте освежили",
   "close": "Затвори",
+  "comma": "Зарез",
   "comment": "Коментар",
   "complete": "Завршено",
   "confirm_contact_delete": "Да, обришите контакт",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Нова Анкета",
   "create_your_account": "Креирајте Ваш Налог",
+  "csv_add_recipients": "Додајте примаоца помоћу ЦСВ-а",
+  "csv_error_duplicated_recipient": "Дуплирани прималац",
+  "csv_error_invalid_amount": "Неважећа вредност износа",
+  "csv_error_max_limit_multiout": "Максимални лимит за Мултиоут је премашен. Лимит је:",
+  "csv_error_max_limit_same_multiout": "Максимални лимит за исти износ преноса је прекорачен. Лимит је:",
+  "csv_error_unreadable_format": "Нечитљив формат",
   "current_price": "Тренутна Цена",
   "current_quantity": "Тренутна Количина",
   "current_version": "Тренутна верзија",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Ако изгубите лозинку, нећете моћи да обавите ниједну трансакцију, тј. Изгубљени кованице. Лозинка није надокнадива. Чувајте тајну ове лозинке. Сви који знају запор су де фацто власници рачуна.",
   "message": "Порука",
   "message_empty": "Порука је празна.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "Ова порука је заштићена.",
   "message_is_not_encrypted": "Ова порука није заштићена.",
+  "message_is_text": "Message is Text?",
   "messages": "Поруке",
   "min_nr_of_options": "Минималан Број Опција",
   "minimum_fee": "Минимум",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Упозорење: Лозинка је једино што дели ваш налог од остатка света. Не користите познате реченице, посебно избегавате оне из популарних песама и света прозе.<br /><br />Никада не показујте вашу лозинку. Ако је изгубите, изгубили сте приступ вашем налогу и свему што се на њему налази!",
   "passphrase_write_below": "Ваша фраза представља вашу лозинку и врло је важна! Како бисмо се уверили да сте је запамтили, молимо упишите је поново у понуђени формулар:",
   "password_required_for_decryption": "Ваша лозинка је потребна за декодирање ове поруке.",
+  "paste_csv_content": "Овде залепите ЦСВ садржај",
   "payload": "Плаћени Терет",
   "payload_hash": "Тежина Hash-а",
   "payload_length": "Payload Length",
@@ -773,9 +783,10 @@
   "repeat": "Поновите",
   "request_burst": "Request BURST",
   "request_processing_time": "Рекуест Процессинг Тиме",
+  "reset_recipients": "Ресетујте примаоце",
   "returning_user_q": "Корисник Повратник?",
   "reward_recipient": "Ревард Реципиент",
-  "same_out": "Same Amount",
+  "same_out": "Исти износ",
   "scoop_num": "Сцооп Нумбер",
   "search_aliases": "Тражите Алиас-е...",
   "search_assets": "Претражи Асcет-е...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Изаберите Схему Боје",
   "select_contact_in_sidebar": "Молимо одаберите контакт у левој колони.",
   "select_node": "Изаберите Ноде",
+  "select_recipients": "Изаберите примаоци",
   "sell": "Продај",
   "sell_alias": "Продајте Алиас",
   "sell_asset_for_burst": "Продајте __assetName__ за BURST",
@@ -799,6 +811,7 @@
   "seller": "Продавац",
   "seller_account_id": "Seller's Account ID",
   "seller_products": "Производи Продавца",
+  "semicolon": "Тацка зарез",
   "send": "Пошаљите",
   "send_a_message": "Пошаљи Поруку",
   "send_burst": "Пошаљите NXТ",
@@ -901,6 +914,7 @@
   "success_valid_token": "Токен је валидан и припада налогу __аccount_link__. Генерисан је у __timestamp__.",
   "suggested_fee": "Предложене накнаде",
   "suggested_fee_help": "Јефтина накнада: 50% шанса за трансакцију ће се остварити у једном од следећих десет блокова. <бр /> Стандардна накнада: 50% шанса за трансакцију ће се извршити у следећем блоку. у наредном блоку и 99% у наредна два блока.",
+  "tabulator": "Табулатор",
   "tags": "Ознаке",
   "tags_categories": "Ознаке (категорије)",
   "tentative": "Привремени",
