--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -19,6 +19,7 @@
   "add_message_q": "Mesaj Ekle?",
   "add_note_to_self_q": "Kendine bir Not Ekle?",
   "add_recipient": "Add Recipient",
+  "add_recipient_batch": "CSV ile birden fazla alıcı ekleme",
   "add_recipient_to_contacts_q": "Alıcı kişiyi hesaba Ekle?",
   "add_sender_as_contact": "Gönderen kişiyi Hesaba Ekle",
   "add_to_group": "Gruba Ekle",
@@ -140,6 +141,7 @@
   "change_quantity": "Miktarı değiştir",
   "cheap_fee": "Ucuz",
   "checking_for_updates": "Güncelleştirmeler kontrol ediliyor...",
+  "choose_delimiter": "Sınırlayıcı seçin",
   "choose_own_passphrase": "Kendi şifrenizi oluşturmak için tıklayın.",
   "clear_results": "Sonuçları sil",
   "clear_search_results": "Arama sonuçlarını sil",
@@ -152,6 +154,7 @@
   "click_to_copy_passphrase": "Parolayı panoya kopyalamak için buraya tıklayın",
   "click_to_refresh": "Yenilemek için tıklayın",
   "close": "Kapat",
+  "comma": "Virgül",
   "comment": "Yorum Yap",
   "complete": "Tamamlanmış",
   "confirm_contact_delete": "Evet, kişiyi Sil",
@@ -183,6 +186,12 @@
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Anket Oluştur",
   "create_your_account": "Hesap Oluştur",
+  "csv_add_recipients": "CSV kullanarak Alıcı Ekleyin",
+  "csv_error_duplicated_recipient": "Çoğaltılmış Alıcı",
+  "csv_error_invalid_amount": "Geçersiz tutar değeri",
+  "csv_error_max_limit_multiout": "Multiout için maksimum limit aşıldı. Sınırı:",
+  "csv_error_max_limit_same_multiout": "Aynı Tutar Multiout için Maksimum Limit aşıldı. Sınırı:",
+  "csv_error_unreadable_format": "Okunamayan Format",
   "current_price": "Güncel Fiyat",
   "current_quantity": "Mevcut miktar",
   "current_version": "Şimdiki versiyonu",
@@ -566,9 +575,9 @@
   "memorize_passphrase_help_addon": "Parolayı kaybederseniz herhangi bir işlem yapamazsınız, yani madeni paralarınız kaybolur. Parola kurtarılamaz. Bu parolayı gizli tut. Parolayı bilen herkes hesap sahibine aittir.",
   "message": "Message",
   "message_empty": "Message is empty.",
-  "message_is_text": "Message is Text?",
   "message_is_encrypted": "This message is encrypted.",
   "message_is_not_encrypted": "This message is not encrypted.",
+  "message_is_text": "Message is Text?",
   "messages": "Messages",
   "min_nr_of_options": "Minimum Nr of Options",
   "minimum_fee": "minimum",
@@ -685,6 +694,7 @@
   "passphrase_warning": "Attention: The passphrase is everything that stands between your account and the rest of the world. Do not use any meaningful sentence, especially any that appears in song or literature.<br /><br />Don't ever disclose your passphrase. If you lose it you lose access to your account!",
   "passphrase_write_below": "Your passphrase is very important! In order to be sure that you have saved it, please write your passphrase below:",
   "password_required_for_decryption": "Bu iletinin şifresini çözmek için şifreniz gerekirlidir.",
+  "paste_csv_content": "CSV içeriğini buraya yapıştırın",
   "payload": "Yükü",
   "payload_hash": "Payload Hash",
   "payload_length": "Payload Length",
@@ -773,9 +783,10 @@
   "repeat": "Tekrarla",
   "request_burst": "Request BURST",
   "request_processing_time": "İşlem Süresi İste",
+  "reset_recipients": "Alıcıları Sıfırla",
   "returning_user_q": "Returning User?",
   "reward_recipient": "Ödül Alıcısı",
-  "same_out": "Same Amount",
+  "same_out": "Aynı Tutar",
   "scoop_num": "Kepçe Numarası",
   "search_aliases": "Search Aliases...",
   "search_assets": "Search Assets...",
@@ -788,6 +799,7 @@
   "select_color_scheme": "Select Color Scheme",
   "select_contact_in_sidebar": "Please select a contact in the left sidebar.",
   "select_node": "Düğüm Seç",
+  "select_recipients": "Alıcıları Seç",
   "sell": "Sell",
   "sell_alias": "Sell Alias",
   "sell_asset_for_burst": "burst için __assetName__ Satış",
@@ -799,6 +811,7 @@
   "seller": "Satıcı",
   "seller_account_id": "Satıcının hesap numarası",
   "seller_products": "Seller Products",
+  "semicolon": "Noktalı virgül",
   "send": "Gönder",
   "send_a_message": "Mesaj gönder",
   "send_burst": "burst gönder",
@@ -901,6 +914,7 @@
   "success_valid_token": "The token is valid and belongs to account __account_link__. It was generated on __timestamp__.",
   "suggested_fee": "Önerilen ücretleri",
   "suggested_fee_help": "Ucuz ücret:% 50 şans işlemi sonraki on bloktan birinde yapılır. <br /> Standart ücret:% 50 şans işlemi sonraki satırda yapılır. <br /> Öncelik ücreti:% 90 şans işlemi yapılır sonraki blokta ve sonraki iki blokta% 99 yapmak için.",
+  "tabulator": "Tabulator",
   "tags": "Tags",
   "tags_categories": "Tags (categories)",
   "tentative": "Tentative",
